--- a/en/b/blankie.856215.wikitext
+++ b/en/b/blankie.856215.wikitext
@@ -4,7 +4,7 @@
 * [[blanky]]
 
 ===Etymology===
-From {{suffix|blanket|ie|lang=en}}
+Shortened from {{suffix|blanket|ie|lang=en}}.
 
 ===Pronunciation===
 * {{IPA|/ˈblæŋki/|lang=en}}
