t+la:[[Iud.]] t-balance ([[WT:EDIT|Assisted]]) <Judg.#27264147>

--- a/en/j/Judg_.801669.wikitext
+++ b/en/j/Judg_.801669.wikitext
@@ -10,5 +10,6 @@
 
 ====Translations====
 {{trans-top|''abbreviation of the equivalent of'' Judges}}
+* Latin: {{t|la|Iūd.|m-p}}
 {{trans-mid}}
 {{trans-bottom}}
