--- a/en/s/species.4327.wikitext
+++ b/en/s/species.4327.wikitext
@@ -17,12 +17,12 @@ From {{etyl|la|en}} {{term|speciēs||appearance; quality|lang=la}}, from {{term|
 #* R. H. Hutton
 #*: What is called spiritualism should, I think, be called a mental '''species''' of materialism.
 # A group of plants or animals having [[similar]] [[appearance]].
+#: {{ux|en|This '''species''' of animal is unique to the area.}}
 #* {{quote-magazine|date=2012-01
 |author=Donald Worster|volume=100|issue=1|page=70|magazine={{w|American Scientist}}
 |title=[http://www.americanscientist.org/bookshelf/pub/a-drier-and-hotter-future A Drier and Hotter Future]
 |passage=Phoenix and Lubbock are both caught in severe drought, and it is going to get much worse. We may see many such [dust] storms in the decades ahead, along with '''species''' extinctions, radical disturbance of ecosystems, and intensified social conflict over land and water. Welcome to the Anthropocene, the epoch when humans have become a major geological and climatic force.}}
-#: {{usex|lang=en|This '''species''' of animal is unique to the area.}}
-# {{context|biology|taxonomy|lang=en}} A [[rank]] in the classification of [[organism]]s, below [[genus]] and above [[subspecies]]; a [[taxon]] at that rank
+# {{label|en|biology|taxonomy}} A [[rank]] in the classification of [[organism]]s, below [[genus]] and above [[subspecies]]; a [[taxon]] at that rank.
 #* {{w|Charles Darwin}}, ''{{w|On the Origin of Species|On the Origin of '''Species'''}}'':
 #*: Hence, in determining whether a form should be ranked as a '''species''' or a variety, the opinion of naturalists having sound judgment and wide experience seems the only guide to follow.
 #* {{RQ:Schuster Hepaticae V|vii}}
@@ -31,15 +31,15 @@ From {{etyl|la|en}} {{term|speciēs||appearance; quality|lang=la}}, from {{term|
 |title=[http://www.americanscientist.org/issues/feature/2013/3/wild-plants-to-the-rescue Wild Plants to the Rescue]
 |volume=101|issue=3|magazine={{w|American Scientist}}
 |passage=Plant breeding is always a numbers game.{{...}}The wild '''species''' we use are rich in genetic variation, and individual plants are highly heterozygous and do not breed true. In addition, we are looking for rare alleles, so the more plants we try, the better.}}
-# {{context|mineralogy|lang=en}} A [[mineral]] with a unique chemical formula whose [[crystals]] belong to a unique crystallographic system.
-# {{context|obsolete|lang=en}} The [[image]] of something cast on a surface, or [[reflected]] from a surface, or [[refracted]] through a [[lens]] or [[telescope]]; a [[reflection]].
-#: ''I cast the '''species''' of the Sun onto a sheet of paper through a telescope.''
-# {{context|Roman Catholicism|lang=en}} Either of the two elements of the [[Eucharist]] after they have been [[consecrated]], so named because they retain the image of the bread and wine before their [[transubstantiation]] into the body and blood of Christ.
+# {{label|en|mineralogy}} A [[mineral]] with a unique chemical formula whose [[crystals]] belong to a unique crystallographic system.
+# {{label|en|obsolete}} The [[image]] of something cast on a surface, or [[reflected]] from a surface, or [[refracted]] through a [[lens]] or [[telescope]]; a [[reflection]].
+#: {{ux|en|I cast the '''species''' of the Sun onto a sheet of paper through a telescope.}}
+# {{label|en|Roman Catholicism}} Either of the two elements of the [[Eucharist]] after they have been [[consecrated]], so named because they retain the image of the bread and wine before their [[transubstantiation]] into the body and blood of Christ.
 # Visible or perceptible presentation; appearance; something perceived.
 #* Isaac Newton
 #*: the '''species''' of the letters illuminated with indigo and violet
 #* Dryden
-#*: Wit, {{...}} the faculty of imagination in the writer, which searches over all the memory for the '''species''' or ideas of those things which it designs to represent.
+#*: Wit,{{...}}the faculty of imagination in the writer, which searches over all the memory for the '''species''' or ideas of those things which it designs to represent.
 # Coin, or coined silver, gold, or other metal, used as a circulating medium; [[specie]].
 #* Arbuthnot
 #*: There was, in the splendour of the Roman empire, a less quantity of current '''species''' in Europe than there is now.
@@ -48,7 +48,7 @@ From {{etyl|la|en}} {{term|speciēs||appearance; quality|lang=la}}, from {{term|
 # A component part of [[compound]] [[medicine]]; a [[simple]].
 # An [[officinal]] mixture or compound powder of any kind; especially, one used for making an [[aromatic]] [[tea]] or [[tisane]]; a tea mixture.
 #: {{rfquotek|Quincy}}
-# {{context|civil law|lang=en}} The form or shape given to materials; fashion or shape; form; figure.
+# {{label|en|civil law}} The form or shape given to materials; fashion or shape; form; figure.
 #: {{rfquotek|Burill}}
 
 ====Usage notes====
