--- a/en/s/species.4327.wikitext
+++ b/en/s/species.4327.wikitext
@@ -14,7 +14,7 @@ From {{etyl|la|en}} {{term|speciēs||appearance; quality|lang=la}}, from {{term|
 {{en-noun|species}}
 
 # A [[type]] or [[kind]] of thing.
-#* R. H. Hutton
+#* {{w|Richard Holt Hutton}} (1826-1897)
 #*: What is called spiritualism should, I think, be called a mental '''species''' of materialism.
 # A group of plants or animals having [[similar]] [[appearance]].
 #: {{ux|en|This '''species''' of animal is unique to the area.}}
@@ -23,7 +23,7 @@ From {{etyl|la|en}} {{term|speciēs||appearance; quality|lang=la}}, from {{term|
 |title=[http://www.americanscientist.org/bookshelf/pub/a-drier-and-hotter-future A Drier and Hotter Future]
 |passage=Phoenix and Lubbock are both caught in severe drought, and it is going to get much worse. We may see many such [dust] storms in the decades ahead, along with '''species''' extinctions, radical disturbance of ecosystems, and intensified social conflict over land and water. Welcome to the Anthropocene, the epoch when humans have become a major geological and climatic force.}}
 # {{label|en|biology|taxonomy}} A [[rank]] in the classification of [[organism]]s, below [[genus]] and above [[subspecies]]; a [[taxon]] at that rank.
-#* {{w|Charles Darwin}}, ''{{w|On the Origin of Species|On the Origin of '''Species'''}}'':
+#* '''1859''', {{w|Charles Darwin}}, ''{{w|On the Origin of Species}}'':
 #*: Hence, in determining whether a form should be ranked as a '''species''' or a variety, the opinion of naturalists having sound judgment and wide experience seems the only guide to follow.
 #* {{RQ:Schuster Hepaticae V|vii}}
 #*: Firstly, I continue to base most '''species''' treatments on personally collected material, rather than on herbarium plants.
@@ -36,18 +36,18 @@ From {{etyl|la|en}} {{term|speciēs||appearance; quality|lang=la}}, from {{term|
 #: {{ux|en|I cast the '''species''' of the Sun onto a sheet of paper through a telescope.}}
 # {{label|en|Roman Catholicism}} Either of the two elements of the [[Eucharist]] after they have been [[consecrated]], so named because they retain the image of the bread and wine before their [[transubstantiation]] into the body and blood of Christ.
 # Visible or perceptible presentation; appearance; something perceived.
-#* Isaac Newton
-#*: the '''species''' of the letters illuminated with indigo and violet
-#* Dryden
+#* {{w|John Dryden}} (1631-1700)
 #*: Wit,{{...}}the faculty of imagination in the writer, which searches over all the memory for the '''species''' or ideas of those things which it designs to represent.
+#* {{w|Isaac Newton}} (1642-1727)
+#*: the '''species''' of the letters illuminated with indigo and violet
 # Coin, or coined silver, gold, or other metal, used as a circulating medium; [[specie]].
-#* Arbuthnot
+#* {{w|John Arbuthnot}} (1667-1735)
 #*: There was, in the splendour of the Roman empire, a less quantity of current '''species''' in Europe than there is now.
 # A public spectacle or exhibition.
-#: {{rfquotek|Francis Bacon}}
+#: {{rfquotek|{{w|Francis Bacon}} (1561-1626)}}
 # A component part of [[compound]] [[medicine]]; a [[simple]].
 # An [[officinal]] mixture or compound powder of any kind; especially, one used for making an [[aromatic]] [[tea]] or [[tisane]]; a tea mixture.
-#: {{rfquotek|Quincy}}
+#: {{rfquotek|{{w|Thomas de Quincey}} (1785-1859)}}
 # {{label|en|civil law}} The form or shape given to materials; fashion or shape; form; figure.
 #: {{rfquotek|Burill}}
 
