--- a/en/v/vortical.855979.wikitext
+++ b/en/v/vortical.855979.wikitext
@@ -22,7 +22,7 @@ From (the stem of) {{etyl|la|en}} {{term|vortex|lang=la}} {{suffix||al|lang=en}}
 * {{trreq|ar}}
 * Armenian: {{t|hy|մրրկային|sc=Armn}}
 * Chinese:
-*: {{trreq|cmn}}
+*: Mandarin: {{t|cmn|旋涡的|sc=Hani}}
 * {{trreq|cs}}
 * Dutch: {{t+|nl|wervelend}}, {{t|nl|dwarrelend als een draaikolk}} 
 * Finnish: {{t|fi|pyörremäinen}}, {{t|fi|pyörteinen}}, {{t|fi|pyörteikäs}}
