--- a/en/o/otter.8227.wikitext
+++ b/en/o/otter.8227.wikitext
@@ -4,7 +4,7 @@
 [[Image:Loutre des pyrenees baronnies 2004.jpg|thumb|otter (1)]]
 
 ===Etymology 1===
-From {{etyl|ang|en}} {{term|oter|lang=ang}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*utraz}}, from {{etyl|ine-pro|en}} {{m|ine-pro|*udrós||water-animal, otter}}, from {{m|ine-pro|*wed-||water}}. Cognate with Old High German {{term|ottar|lang=goh}}, Old Church Slavonic {{term|ⰲⱏⰺⰴⱃⰰ|tr=vydra|lang=cu|sc=Glag}}, and Ancient Greek {{term|ὕδρα|tr=hydra||water snake|lang=grc}}. More etymology under English [[water]].
+From {{etyl|ang|en}} {{m|ang|oter}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*utraz}}, from {{etyl|ine-pro|en}} {{m|ine-pro|*udrós||water-animal, otter}}, from {{m|ine-pro|*wed-||water}}. Cognate with {{etyl|goh|-}} {{m|goh|ottar}}, {{etyl|cu|-}} {{m|cu|ⰲⱏⰺⰴⱃⰰ|tr=vydra|sc=Glag}}, and {{etyl|grc|-}} {{m|grc|ὕδρα|tr=hydra||water snake|sc=polytonic}}. More etymology under English [[water]].
 
 ====Pronunciation====
 * {{a|RP}} {{IPA|/ˈɒt.ə/|lang=en}}
