t+it:[[degnarsi]] ([[WT:EDIT|Assisted]]) <talk down#27327472>

--- a/en/t/talk down.775561.wikitext
+++ b/en/t/talk down.775561.wikitext
@@ -17,6 +17,7 @@
 {{trans-top|patronize}}
 * French: {{t+|fr|prendre de haut}}
 {{trans-mid}}
+* Italian: {{t|it|degnarsi}}
 {{trans-bottom}}
 
 [[Category:English phrasal verbs]]
