/* Translations */ lao ttbc++ <thing#27338221>

--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -259,7 +259,7 @@ From {{etyl|enm|en}}, from {{etyl|ang|en}} {{term|þing|lang=ang||tr=thing}}, fr
 * {{ttbc|jv}}: {{t|jv|barang}}
 * {{ttbc|ku}}:
 *: Sorani: {{t|ku|شت|tr=shit|sc=ku-Arab}}
-* {{ttbc|lo}}: {{t|lo|ເຄື່ອງ}}
+* {{ttbc|lo}}: {{t|lo|ເຄື່ອງ}}, {{l|lo|ຂອງ}}
 * {{ttbc|luy}}: {{t|luy|sindu}}
 * {{ttbc|mt}}: {{t|mt|ħaġa}}
 * {{ttbc|mn}}: {{t|mn|юм|sc=Cyrl}}
