--- a/en/g/grognard.855664.wikitext
+++ b/en/g/grognard.855664.wikitext
@@ -12,6 +12,7 @@ From the {{etyl|fr|en}} {{term|grognard||lang=fr|old soldier}}.
 # An [[old]] [[soldier]].
 # {{context|games|slang|lang=en}} Someone who [[enjoys]] playing older war-games or roleplaying games, or older versions of such games, when newer ones are available.
 #: ''James is such a '''grognard''', he only plays the original edition of Dungeons and Dragons.''
+#* {{seecites|lang=en}}
 
 ====Translations====
 {{trans-top|old soldier}}
