--- a/en/r/ratting.742038.wikitext
+++ b/en/r/ratting.742038.wikitext
@@ -12,7 +12,8 @@
 ===Noun===
 {{en-noun|-}}
 
-# {{context|archaic|lang=en}} The [[sport]] of setting a [[dog]] upon [[rat]]s confined in a [[pit]] to see how many he will kill in a given time.
+# {{context|archaic|lang=en}} an [[illegal]] [[blood sport]] of setting a [[dog]] upon [[rat]]s confined in a [[pit]] to see how many he will kill in a given time.
+# the [[legal]] [[vocation]] involving the [[pest control]] of [[rats]], typically using a [[working terrier]].
 
 ===Anagrams===
 * [[tarting#English|tarting]]
