/* See also */ <ratting#27419784>

--- a/en/r/ratting.742038.wikitext
+++ b/en/r/ratting.742038.wikitext
@@ -15,7 +15,7 @@
 # a [[legal]] [[vocation]] involving the [[pest control]] of [[rats]], typically using a [[working terrier]].
 
 ===See also===
-*[[rat-baiting]]
+*[[rat-baiting]] - illegal activity
 
 ===Anagrams===
 * [[tarting#English|tarting]]
