--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -150,7 +150,7 @@ From {{etyl|enm|en}} {{term|then|then(ne)|lang=enm}}, {{term|than|than(ne)|lang=
 {{trans-mid}}
 * Malay: {{t|ms|tidak lama kemudian}}
 * Maori: {{t|mi|kātahi}}
-* {{trreq|Mongolian}}
+* {{trreq|mn}}
 * Norwegian: {{t+|no|så}}, {{t+|no|deretter}}, {{t+|no|siden}}
 * Novial: {{t|nov|tand}}
 * Old English: {{t|ang|þā}}
@@ -199,7 +199,7 @@ From {{etyl|enm|en}} {{term|then|then(ne)|lang=enm}}, {{term|than|than(ne)|lang=
 * Kurdish: {{t+|ku|paşî}}, {{t+|ku|dûre}}, {{t+|ku|piştre}}, {{t+|ku|dûvre}}, {{t|ku|peyre}}
 * Latin: {{t+|la|deinde}}, {{t+|la|exinde}}
 * Malay: {{t|ms|selepas itu}}
-* {{trreq|Mongolian}}
+* {{trreq|mn}}
 * Navajo: {{t|nv|índa}}
 * Norwegian: {{t+|no|så}}, {{t+|no|deretter}}
 * Old English: {{t|ang|þā}}
@@ -242,7 +242,7 @@ From {{etyl|enm|en}} {{term|then|then(ne)|lang=enm}}, {{term|than|than(ne)|lang=
 * Latin: {{t+|la|tunc}}, {{t+|la|tum}}
 * Lithuanian: {{t|lt|tada}}
 * Malay: {{t|ms|oleh sebab yang demikian}}
-* {{trreq|Mongolian}}
+* {{trreq|mn}}
 * Norwegian: {{t+|no|da}}, {{t+|no|i så fall}}
 * Old English: {{t|ang|þā}}
 * Pashto: {{t+|ps|بيا|tr=byâ}}
