--- a/en/a/all bark and no bite.742638.wikitext
+++ b/en/a/all bark and no bite.742638.wikitext
@@ -11,6 +11,7 @@
 
 ====Translations====
 {{trans-top|full of big talk}}
+* Greek: {{t|el|σκυλί που γαβγίζει δεν δαγκώνει|sc=Grek}}, {{t|el|σκύλος που γαβγίζει δεν δαγκώνει|sc=Grek}}
 * Italian: {{t|it|tutto fumo e niente arrosto}}, {{t|it|cane che abbaia non morde}}
 * Spanish: {{t|es|perro ladrador, poco mordedor}}, {{t|es|mucho ruido y pocas nueces}}
 {{trans-mid}}
