--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -261,7 +261,7 @@ From {{etyl|enm|en}} {{term|whistlen|lang=enm}}; {{etyl|ang|en}} {{term|hwistlan
 
 ===See also===
 * {{pedialite}}
-{{Wikisource1911Enc Citation|whistle}}
+{{Wikisource1911Enc Citation|Whistle}}
 
 [[ar:whistle]]
 [[cs:whistle]]
