--- a/en/h/helping hand.803463.wikitext
+++ b/en/h/helping hand.803463.wikitext
@@ -10,8 +10,9 @@
 {{trans-top|any assistance, help or aid}}
 * Finnish: {{t|fi|auttava käsi}}
 * French: {{t+|fr|coup de pouce|m}}, {{t+|fr|coup de main|m}}
-{{trans-mid}}
 * Icelandic: {{t+|is|hjálparhönd|f}}, {{qualifier|lend a helping hand}} {{t|is|rétta hjálparhönd}}, {{qualifier|give a helping hand}} {{t|is|leggja hönd á plóg}}, {{t|is|leggja hönd á plóg}}
+{{trans-mid}}
+* Swedish: {{t+|sv|handtag|n}}, {{t|sv|hjälpande hand|c}}
 {{trans-bottom}}
 
 [[et:helping hand]]
