Migrating [[Template:ttbc]] and [[Template:trreq]] to [[Template:t-check]] and [[Template:t-needed]] <advertisement#27432404>

--- a/en/a/advertisement.4312.wikitext
+++ b/en/a/advertisement.4312.wikitext
@@ -69,7 +69,7 @@ From {{etyl|frm|en}} {{term|advertissement||statement calling attention|lang=frm
 * German: {{t+|de|Anzeige|f}}, {{t+|de|Werbung|f}}, {{t+|de|Annonce|f}}, {{t|de|Reklameanzeige|f}}
 * Greek: {{t+|el|διαφήμιση|f|tr=diafimisi}}
 * Hebrew: {{t|he|פרסומת|f|tr=pirsomet}}
-* {{trreq|hi}}
+* Hindi: {{t-needed|hi}}
 * Hungarian: {{t+|hu|hirdetés}}, {{t+|hu|reklám}}
 * Icelandic: {{t+|is|auglýsing|f}}
 * Indonesian: {{t+|id|iklan}}, {{t+|id|reklame}}
