--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -85,11 +85,11 @@ From {{etyl|enm|en}} {{term|again|lang=enm}}, {{term|ayain|lang=enm}}, {{term|an
 * Afrikaans: {{t|af|weer}}, {{t|af|alweer}}
 * Arabic: {{t|ar|مرة أخرى|f|tr=márra(tan) ʾúxrā}}, {{t|ar|كرة أخرى|f|tr=kárra(tan) ʾúxrā}} {{qualifier|adverbial accusative used}}, {{t|ar|ثانيةً|tr=ṯāniyatan|sc=Arab}}
 *: Egyptian Arabic: {{t|arz|تاني|tr=tani|sc=Arab}}, {{t|arz|كمان|tr=kaman - kman|sc=Arab}}
-* {{trreq|an}}
+* Aragonese: {{t-needed|an}}
 * Armenian: {{t|hy|էլի|tr=ēli}}, {{t|hy|կրկին|tr=krkin}}, {{qualifier|Eastern-Armenian}} {{t|hy|նորից|tr=noric’}}, {{qualifier|Western-Armenian}} {{t|hy|նորեն|tr=noren}}
 * Asturian: {{t|ast|otra vez}}, {{t|ast|otra vegada}}, {{t|ast|de nuevo}}
 * Avar: {{t|av|жеги}}
-* {{trreq|az}}
+* Azeri: {{t-needed|az}}
 * Bashkir: {{t|ba|тағы ла|tr=tağï la|sc=Cyrl}}, {{t|ba|тағы берҙе|tr=tağï berðe|sc=Cyrl}}
 * Basque: {{t|eu|berriro}}
 * Belarusian: {{t|be|зноў|tr=znoŭ|sc=Cyrl}}, {{t|be|яшчэ раз|tr=jaščé raz|sc=Cyrl}}
@@ -127,7 +127,7 @@ From {{etyl|enm|en}} {{term|again|lang=enm}}, {{term|ayain|lang=enm}}, {{term|an
 * Irish: {{t+|ga|arís}}
 * Italian: {{t+|it|di nuovo}}, {{t+|it|ancora}}
 * Japanese: {{t+|ja|又|tr=mata}}, {{t+|ja|また|tr=mata}}, {{t|ja|再び|tr=ふたたび, futatabi}}, {{t|ja|もう一度|tr=mō ichido}}, {{t+|ja|あらためて|tr=aratamete}}
-* {{trreq|kn}}
+* Kannada: {{t-needed|kn}}
 * Khmer: {{t+|km|ទៀត|tr=dtīət|sc=Khmr}}, {{t|km|ម្ដងទៀត|tr=mdorng dtīət|sc=Khmr}}
 {{trans-mid}}
 * Korean: {{t+|ko|다시|sc=Kore}}, {{t+|ko|또|sc=Kore}}
