--- a/en/a/adjustment.4313.wikitext
+++ b/en/a/adjustment.4313.wikitext
@@ -42,7 +42,7 @@
 * French: {{t+|fr|ajustement|m}}, {{t|fr|arèglement|m}}
 * German: {{t+|de|Anpassung|f}}, {{t+|de|Regulierung|f}}
 * Greek: {{t+|el|διευθέτηση|tr=diefθétisi|f}}, {{t+|el|ρύθμιση|tr=ríiθmisi|f}}, {{t+|el|προσαρμογή|tr=prosarmogí|f}}, {{t|el|διαβάθμηση|tr=diaváθmisi|f}}
-* {{trreq|gn}}
+* Guaraní: {{t-needed|gn}}
 * Hebrew: {{t+|he|כִּוּוּן|m}}
 * Hungarian: {{t+|hu|beállítás}}
 * Interlingua: {{t|ia|adjustamento}}
@@ -50,7 +50,7 @@
 * Irish: {{t|ga|gabháil|m}}, {{t|ga|ceartú|m}}
 * Italian: {{t+|it|adattamento|m}}, {{t+|it|inserimento|m}}
 * Japanese: {{t+|ja|調整|tr=ちょうせい, chōsei|sc=Jpan}}, {{t+|ja|調節|tr=ちょうせつ, chōsetsu|sc=Jpan}}
-* {{trreq|ko}}
+* Korean: {{t-needed|ko}}
 * Kyrgyz: {{t+|ky|жөнгө салуу}}, {{t+|ky|ыңгайлаштыруу}}, {{t|ky|ылайыктоо}}
 * Latin: {{t|la|accommodātiō|f}}
 * Polish: {{t+|pl|ustawienie|n}}, {{t|pl|regulacja|f}}
@@ -62,7 +62,7 @@
 * Spanish: {{t+|es|ajuste|m}}, {{t+|es|modificación|f}}
 * Swedish: {{t+|sv|justering|c}}
 * Telugu: {{t|te|సర్దుబాటు}}
-* {{trreq|tpn}}
+* Tupinambá: {{t-needed|tpn}}
 * Turkish: {{t+|tr|ayarlama}}, {{t+|tr|ayar}}
 * Welsh: {{t|cy|cyweiriad|m}}
 {{trans-bottom}}
