Migrating [[Template:ttbc]] and [[Template:trreq]] to [[Template:t-check]] and [[Template:t-needed]] <bleed#27432734>

--- a/en/b/bleed.6801.wikitext
+++ b/en/b/bleed.6801.wikitext
@@ -48,12 +48,12 @@ From {{etyl|ang|en}} {{m|ang|blēdan}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*bl
 * Armenian: {{t|hy|արյունահոսել|tr=aryunahosel}}
 * Aromanian: {{t|rup|sãndzinedzu}}
 * Asturian: {{t|ast|sangrar}}
-* {{trreq|eu}}
+* Basque: {{t-needed|eu}}
 * Bengali: {{t|bn|রক্ত ঝরা|sc=Beng}}, {{t|bn|রক্ত পড়া|sc=Beng}}
 * Bulgarian: {{t|bg|тече кръв}}
 * Catalan: {{t+|ca|sagnar}}
 * Chinese:
-*: {{ttbc|cmn}}: {{t+|cmn|出血}}, {{t+|cmn|流血|tr=liúxuè|sc=Hani}}, {{t+|cmn|放血|tr=fàngxuè|sc=Hani}}
+*: Mandarin: {{t+check|cmn|出血}}, {{t+check|cmn|流血|tr=liúxuè|sc=Hani}}, {{t+check|cmn|放血|tr=fàngxuè|sc=Hani}}
 * Czech: {{t|cs|krvácet}}
 * Danish: {{t+|da|bløde}}
 * Dutch: {{t+|nl|bloeden}}
@@ -67,7 +67,7 @@ From {{etyl|ang|en}} {{m|ang|blēdan}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*bl
 * German: {{t+|de|bluten}}
 * Greek: {{t+|el|αιμορραγώ||tr=aimorragó}}, {{t+|el|ματώνω||tr=matóno}}
 * Hebrew: {{t|he|דִּימֵּם|tr=dimem}}
-* {{trreq|hi}}
+* Hindi: {{t-needed|hi}}
 * Hungarian: {{t+|hu|vérzik}}
 * Icelandic: {{qualifier|impersonal}} {{t|is|blæða}}
 * Ido: {{t+|io|sangifar}}
@@ -97,7 +97,7 @@ From {{etyl|ang|en}} {{m|ang|blēdan}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*bl
 * Slovak: {{t|sk|krvácať}}
 * Slovene: {{t+|sl|krvaveti}}
 * Spanish: {{t+|es|sangrar}}
-* {{trreq|sw}}
+* Swahili: {{t-needed|sw}}
 * Swedish: {{t+|sv|blöda}}
 * Tagalog: {{t|tl|pagdugo}}
 * Thai: {{t|th|ตกเลือด|tr=dtòk lêuat}}
