--- a/en/b/bid.6797.wikitext
+++ b/en/b/bid.6797.wikitext
@@ -90,7 +90,7 @@ From {{etyl|enm|en}} {{term|beden|lang=enm}}, from the {{etyl|ang|en}} verb {{m|
 * German: {{t+|de|bieten}}
 * Italian: {{t|it|fare un'offerta per un'asta}}
 * Japanese: {{t|ja|[[値]][[を]][[つける]]|tr=ねをつける, ne o tsukeru}}, {{t|ja|入札|tr=にゅうさつする, nyūsatsu suru|alt=入札する}}
-* {{ttbc|roa-jer}}: {{t|roa-jer|offri}}
+* Jèrriais: {{t-check|roa-jer|offri}}
 * Russian: {{t|ru|[[предлага́ть]] [[цена|це́ну]]|impf}}, {{t|ru|[[предложи́ть]] [[цена|це́ну]]|pf}}
 * Thai: {{t|th|ประมูล|tr=bpràmoon}}
 {{trans-bottom}}
@@ -155,44 +155,44 @@ From {{etyl|enm|en}} {{term|beden|lang=enm}}, from the {{etyl|ang|en}} verb {{m|
 
 =====Translations=====
 {{trans-top|offer at an auction}}
-* {{trreq|sq}}
+* Albanian: {{t-needed|sq}}
 * Arabic: {{t+|ar|عرض|m|tr=3arD}}, {{t|ar|عطاء|m|tr=3aTaa'}}
-*: {{trreq|arz}}
+*: Egyptian Arabic: {{t-needed|arz}}
 * Armenian: {{t|hy|[[գնի]] [[առաջարկ]]|sc=Armn}}, {{t|hy|հայտ|sc=Armn}}
 * Bulgarian: {{t+|bg|оферта|f|tr=oferta}}
 * Chinese:
 *: Mandarin: {{t+|cmn|出價|sc=Hani}}, {{t|cmn|出价|tr=chūjià|sc=Hani}}
-* {{trreq|cs}}
+* Czech: {{t-needed|cs}}
 * Danish: {{t|da|bud}}
 * Dutch: {{t+|nl|bod|n}}
 * Finnish: {{t+|fi|tarjous}}
 * French: {{t+|fr|enchère|f}}
 * German: {{t+|de|Gebot|n}}
 * Greek: {{t+|el|προσφορά|f|tr=prosforá}}
-* {{trreq|he}}
-* {{trreq|hi}}
+* Hebrew: {{t-needed|he}}
+* Hindi: {{t-needed|hi}}
 * Italian: {{t+|it|offerta|f}}
 * Japanese: {{t|ja|付け値|tr=つけね, tsukene}}
-* {{trreq|ko}}
-* {{trreq|mt}}
+* Korean: {{t-needed|ko}}
+* Maltese: {{t-needed|mt}}
 {{trans-mid}}
 * Maori: {{t|mi|piti}}
 * Norwegian:
 *: Bokmål: {{t+|no|bud|n}}
 *: Nynorsk: {{t|nn|bud|n}}
 * Persian: {{t|fa|دو زن داری|sc=fa-Arab}}
-* {{trreq|pl}}
+* Polish: {{t-needed|pl}}
 * Portuguese: {{t+|pt|licitação|f}}
-* {{trreq|ro}}
+* Romanian: {{t-needed|ro}}
 * Russian: {{t|ru|предлагаемая цена|f|tr=predlagájemaja cená}}, {{t+|ru|заявка|f|tr=zajávka}}, {{t+|ru|ставка|f|tr=stávka}}
-* {{trreq|sh}}
-* {{trreq|sk}}
+* Serbo-Croatian: {{t-needed|sh}}
+* Slovak: {{t-needed|sk}}
 * Slovene: {{t|sl|ponúdba|f}}
 * Spanish: {{t|es|licitación|f}}
 * Swedish: {{t+|sv|bud}}
 * Thai: {{t|th|ประมูล|tr=bpràmoon}}
-* {{trreq|tr}}
-* {{trreq|uk}}
+* Turkish: {{t-needed|tr}}
+* Ukrainian: {{t-needed|uk}}
 * Vietnamese: {{t|vi|đặt giá|alt=sự đặt giá}}, {{t+|vi|trả giá|alt=sự trả giá}}
 {{trans-bottom}}
 
