Migrating [[Template:ttbc]] and [[Template:trreq]] to [[Template:t-check]] and [[Template:t-needed]] <simple#27432822>

--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -114,61 +114,61 @@ From {{etyl|enm|en}} {{term|simple|lang=enm}}, from {{etyl|fro|en}} and {{etyl|f
 * Arabic: {{t+|ar|بسيط|tr=basīṭ|sc=Arab}}, {{t+|ar|سهل|tr=sahl|sc=Arab}} {{qualifier|easy}}
 * Aragonese: {{t+|an|simple}}
 * Armenian: {{t|hy|պարզ|tr=parz}}, {{t|hy|հասարակ|tr=hasarak}}
-* {{trreq|as}}
+* Assamese: {{t-needed|as}}
 * Asturian: {{t+|ast|simple}}, {{t+|ast|cenciellu}}
-* {{trreq|ay}}
+* Aymara: {{t-needed|ay}}
 * Azeri: {{t+|az|sadə}}, {{t|az|bəsit}}
 * Bashkir: {{t|ba|ябай|sc=Cyrl}}
-* {{trreq|eu}}
+* Basque: {{t-needed|eu}}
 * Belarusian: {{t|be|про́сты|sc=Cyrl}}, {{t|be|лёгкі|sc=Cyrl}} {{qualifier|easy}}
 * Bengali: {{t|bn|সহজ|tr=sôhôj|sc=Beng}}
-* {{trreq|br}}
+* Breton: {{t-needed|br}}
 * Bulgarian: {{t+|bg|прост|m|tr=prost}}, {{t+|bg|ле́сен|sc=Cyrl}} {{qualifier|easy}}
 * Burmese: {{t+|my|ရိုး|tr=rui:|sc=Mymr}}
 * Catalan: {{t+|ca|simple}}, {{t+|ca|senzill}}
-* {{trreq|chr}}
-* {{trreq|ny}}
+* Cherokee: {{t-needed|chr}}
+* Chichewa: {{t-needed|ny}}
 * Chinese:
 *: Mandarin: {{t+|cmn|簡單|sc=Hani}}, {{t|cmn|简单|tr=jiǎndān|sc=Hani}}, {{qualifier|easy}} {{t+|cmn|容易|tr=róngyì|sc=Hani}}
-* {{trreq|co}}
+* Corsican: {{t-needed|co}}
 * Czech: {{t+|cs|jednoduchý|m}}, {{t+|cs|prostý}}, {{t+|cs|lehký}} {{qualifier|easy}}
-* {{trreq|da}}
-* {{trreq|dv}}
+* Danish: {{t-needed|da}}
+* Dhivehi: {{t-needed|dv}}
 * Dutch: {{t+|nl|eenvoudig}}, {{t+|nl|simpel}}
 * Esperanto: {{t+|eo|simpla}}
 * Estonian: {{t+|et|lihtne}}
-* {{trreq|ee}}
-* {{trreq|ext}}
+* Ewe: {{t-needed|ee}}
+* Extremaduran: {{t-needed|ext}}
 * Finnish: {{t+|fi|yksinkertainen}} ({{t+|fi|simppeli}}, ''slang'')
 * French: {{t+|fr|simple}}
-* {{trreq|fur}}
+* Friulian: {{t-needed|fur}}
 * Galician: {{t|gl|simple}}, {{t|gl|sinxelo}}
 * Georgian: {{t|ka|მარტივი|tr=martivi|sc=Geor}}, {{t|ka|უბრალო|tr=ubralo|sc=Geor}}, {{t|ka|სადა|tr=sada|sc=Geor}}
 * German: {{t+|de|einfach}}, {{t+|de|simpel}}
 * Greek: {{t+|el|απλός|tr=aplós}}
-* {{trreq|gu}}
+* Gujarati: {{t-needed|gu}}
 * Haitian Creole: {{t|ht|senp}}
-* {{trreq|ha}}
+* Hausa: {{t-needed|ha}}
 * Hawaiian: {{t|haw|maʻalahi}}
 * Hebrew: {{t|he|פשוט}}
 * Hindi: {{t|hi|सरल|tr=saral|sc=Deva}}, {{qualifier|easy}} {{t|hi|आसान|tr=āsān|sc=Deva}}
 * Hungarian: {{t+|hu|egyszerű}}
 * Icelandic: {{t+|is|einfaldur|m}}
 * Ido: {{t+|io|simpla}}
-* {{trreq|ig}}
+* Igbo: {{t-needed|ig}}
 * Indonesian: {{t+|id|sederhana}}, {{t+|id|mudah}}
-* {{trreq|ia}}
-* {{trreq|ie}}
+* Interlingua: {{t-needed|ia}}
+* Interlingue: {{t-needed|ie}}
 * Irish: {{t|ga|simplí}}
 * Italian: {{t+|it|semplice}}, {{t+|it|mero|m}}
 * Japanese: {{t+|ja|簡単|tr=かんたんな, kantan-na|alt=簡単な|sc=Jpan}}, {{t+|ja|単純|tr=たんじゅんな, tanjun-na|alt=単純な|sc=Jpan}}, {{qualifier|easy}} {{t+|ja|易い|tr=やすい, yasui|sc=Jpan}}
-* {{trreq|jv}}
+* Javanese: {{t-needed|jv}}
 * Jèrriais: {{t|roa-jer|sîmpl'ye|m|f}}
-* {{trreq|kn}}
+* Kannada: {{t-needed|kn}}
 * Kazakh: {{t+|kk|қарапайым|tr=qarapayım|sc=Cyrl}}, {{t|kk|жеңіл|sc=Cyrl}} {{qualifier|easy}}
 * Khmer: {{t|km|មិនពិបាក|tr=mɨn pi’baak|sc=Khmr}}
-* {{trreq|rw}}
-* {{trreq|rn}}
+* Kinyarwanda: {{t-needed|rw}}
+* Kirundi: {{t-needed|rn}}
 * Korean: {{t|ko|간단한|tr=gandan-han|sc=Kore}} ({{t+|ko|簡單|sc=Kore}} + {{t+|ko|한|sc=Kore}}), {{qualifier|predicate}} {{t+|ko|간단하다|tr=gandan-hada|sc=Kore}}
 * Kurdish:
 *: Sorani: {{t+|ku|ئاسان|tr=AsAn|sc=ku-Arab}}, {{t+|ku|ساکار|tr=sAkAr|sc=ku-Arab}}
@@ -180,42 +180,42 @@ From {{etyl|enm|en}} {{term|simple|lang=enm}}, from {{etyl|fro|en}} and {{etyl|f
 * Latvian: {{t|lv|prasts}}, {{t|lv|vienkāršs}}
 * Lithuanian: {{t+|lt|paprastas}}
 * Lojban: {{t|jbo|sampu}}
-* {{trreq|lg}}
-* {{trreq|lb}}
+* Luganda: {{t-needed|lg}}
+* Luxembourgish: {{t-needed|lb}}
 * Macedonian: {{t|mk|едно́ставен|sc=Cyrl}}, {{t|mk|прост|sc=Cyrl}}, {{t|mk|ле́сен|sc=Cyrl}} {{qualifier|easy}}
 * Malay: {{t|ms|mudah}}
-* {{trreq|ml}}
+* Malayalam: {{t-needed|ml}}
 * Maltese: {{t|mt|sempliċi}}
 * Manx: {{t|gv|oney}}, {{t|gv|macaintagh}}, {{t|gv|neuchialgagh}}
-* {{trreq|mr}}
+* Marathi: {{t-needed|mr}}
 * Mirandese: {{t|mwl|lhano}}
 * Mongolian: {{t|mn|энгийн|sc=Cyrl}}
-* {{trreq|ne}}
+* Nepali: {{t-needed|ne}}
 * Novial: {{t|nov|simpli}}
 * Occitan: {{t+|oc|simple}}
-* {{trreq|ang}}
+* Old English: {{t-needed|ang}}
 * Oriya: {{t|or|ସରଳ|sc=Orya}}
-* {{trreq|ps}}
+* Pashto: {{t-needed|ps}}
 * Persian: {{t+|fa|ساده|tr=sâde|sc=fa-Arab}}
 * Polish: {{t+|pl|prosty|m}}, {{t+|pl|łatwy|m}}, {{t+|pl|lekki}} {{qualifier|easy}}
 * Portuguese: {{t+|pt|simples}}
-* {{trreq|pa}}
-* {{trreq|raj}}
+* Punjabi: {{t-needed|pa}}
+* Rajasthani: {{t-needed|raj}}
 * Romanian: {{t+|ro|simplu|m|n}}, {{t|ro|necomplicat|m|n}}
 * Romansch: {{t|rm|simpel}} {{qualifier|Rumantsch Grischun, Surmiran, Puter, Vallader}}, {{t|rm|sempel}} {{qualifier|Sursilvan, Sutsilvan}}
 * Russian: {{t+|ru|простой|m|tr=prostój}}, {{qualifier|easy}} {{t+|ru|лёгкий|tr=ljóxkij|sc=Cyrl}}
-* {{trreq|sco}}
+* Scots: {{t-needed|sco}}
 * Scottish Gaelic: {{t|gd|sìmplidh}}
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|је̏дноста̄ван|sc=Cyrl}}, {{t|sh|лак}} {{qualifier|easy}}
 *: Roman: {{t|sh|jȅdnostāvan}}, {{t|sh|lak}} {{qualifier|easy}}
 * Sicilian: {{t+|scn|sìmplici}}, {{t+|scn|sèmplici}}, {{t+|scn|sìmprici}}, {{t+|scn|sèmprici}}
 * Silesian: {{t|szl|ajnfachowy}}
-* {{trreq|sd}}
-* {{trreq|si}}
+* Sindhi: {{t-needed|sd}}
+* Sinhalese: {{t-needed|si}}
 * Slovak: {{t|sk|jednoduchý}}, {{t|sk|prostý}}, {{t|sk|ľahký}} {{qualifier|easy}}
 * Slovene: {{t|sl|preprost}}, {{t|sl|enostaven}}, {{t+|sl|lahek}} {{qualifier|easy}}
-* {{trreq|so}}
+* Somali: {{t-needed|so}}
 * Spanish: {{t+|es|simple}}, {{t+|es|sencillo}}
 * Swedish: {{t+|sv|enkel}}, {{t+|sv|simpel}}
 * Tajik: {{t|tg|сода|sc=Cyrl}}
@@ -227,18 +227,18 @@ From {{etyl|enm|en}} {{term|simple|lang=enm}}, from {{etyl|fro|en}} and {{etyl|f
 * Turkmen: {{t|tk|sada}}, {{t|tk|ýönekeý}}
 * Ukrainian: {{t+|uk|про́стий|sc=Cyrl}}, {{t|uk|ле́гкий|sc=Cyrl}} {{qualifier|easy}}
 * Urdu: {{qualifier|easy}} {{t+|ur|آسان|tr=āsān|sc=ur-Arab}}
-* {{trreq|ug}}
+* Uyghur: {{t-needed|ug}}
 * Uzbek: {{t|uz|sodda}}, {{t|uz|oson}} {{qualifier|easy}}
 * Vietnamese: {{t+|vi|giản dị}}, {{t+|vi|mộc mạc}}
-* {{trreq|vo}}
-* {{trreq|wa}}
-* {{trreq|cy}}
+* Volapük: {{t-needed|vo}}
+* Walloon: {{t-needed|wa}}
+* Welsh: {{t-needed|cy}}
 * West Frisian: {{t+|fy|ienfâldich}}
-* {{trreq|wo}}
-* {{trreq|xh}}
-* {{trreq|yi}}
-* {{trreq|yo}}
-* {{trreq|zu}}
+* Wolof: {{t-needed|wo}}
+* Xhosa: {{t-needed|xh}}
+* Yiddish: {{t-needed|yi}}
+* Yoruba: {{t-needed|yo}}
+* Zulu: {{t-needed|zu}}
 {{trans-bottom}}
 
 {{trans-top|simple-minded}}
