--- a/en/p/pledge.7357.wikitext
+++ b/en/p/pledge.7357.wikitext
@@ -33,11 +33,11 @@ From {{etyl|enm|en}} {{m|enm|plege}}, from {{etyl|xno|en}} {{m|fro|plege}}, from
 * Finnish: {{t+|fi|luvata}}, {{t+|fi|sitoutua}}
 * French: {{t+|fr|promettre}}
 * German: {{t|de|zusichern}}, {{t+|de|versprechen}}
-* {{trreq|he}}
-* {{trreq|is}}
+* Hebrew: {{t-needed|he}}
+* Icelandic: {{t-needed|is}}
 * Italian: {{t+|it|promettere}}, {{t+|it|impegnarsi}}
 * Japanese: {{t+|ja|公約|tr=kōyaku suru|alt=公約する}}, {{t+|ja|保証|tr=ほしょうする, hoshō suru|alt=保証する|sc=Jpan}}
-* {{trreq|ko}}
+* Korean: {{t-needed|ko}}
 {{trans-mid}}
 * Latin: {{t|la|spondere}}, {{t|la|vovere}}
 * Malay: {{t|ms|ikrar}}
@@ -48,10 +48,10 @@ From {{etyl|enm|en}} {{m|enm|plege}}, from {{etyl|xno|en}} {{m|fro|plege}}, from
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|залога}}, {{t|sh|завет}}, {{t|sh|завјет}}, {{t|sh|обећање}}, {{t|sh|присега}}
 *: Roman: {{t+|sh|zaloga}}, {{t|sh|zavet}}, {{t+|sh|zavjet}}, {{t+|sh|obećanje}}, {{t+|sh|prisega}}
-* {{trreq|sk}}
+* Slovak: {{t-needed|sk}}
 * Slovene: {{t|sl|zapriseči}}, {{t|sl|zavezati se}}, {{t|sl|zaobljubiti se}}
 * Spanish: {{t+|es|prometer}}, {{t+|es|jurar}}
-* {{trreq|th}}
+* Thai: {{t-needed|th}}
 * Vietnamese: {{t+|vi|cam kết}}, {{t+|vi|thề}}
 {{trans-bottom}}
 
@@ -113,7 +113,7 @@ From {{etyl|enm|en}} {{m|enm|plege}}, from {{etyl|xno|en}} {{m|fro|plege}}, from
 *: Cyrillic: {{t|sh|за́вет|m}}
 *: Roman: {{t|sh|závet|m}}
 * Slovene: {{t|sl|zaprisega|f}}, {{t|sl|zaobljuba|f}}
-* {{ttbc|es}}: {{t+|es|juramento|m}}, {{t|es|[[promesa]] [[solemne]]|f}} <!-- was "[[promesa]] [[solemne]]" - assumed sum-of-parts; if an idiom, remove the embedded wikilinks to the individual words. see [[User:Kephir/gadgets/xte#Translation_fixing]] -->
+* Spanish: {{t+check|es|juramento|m}}, {{t-check|es|[[promesa]] [[solemne]]|f}} <!-- was "[[promesa]] [[solemne]]" - assumed sum-of-parts; if an idiom, remove the embedded wikilinks to the individual words. see [[User:Kephir/gadgets/xte#Translation_fixing]] -->
 * Swedish: {{t+|sv|underpant|c}}
 * Telugu: {{t+|te|ప్రతిజ్ఞ|tr=prathigna|sc=Telu}}, {{t+|te|ప్రతిన|tr=prathina|sc=Telu}}
 {{trans-bottom}}
