Migrating [[Template:ttbc]] and [[Template:trreq]] to [[Template:t-check]] and [[Template:t-needed]] <rabbit#27433130>

--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -53,7 +53,7 @@ From {{etyl|enm|en}} {{term|rabet|lang=enm}}, from {{etyl|frm|en}} dialect (comp
 * Albanian: {{t|sq|lepur i gropave}}
 * Arabic: {{t|ar|ارنب|m|alt=أرْنَب|tr='arnab}}
 * Armenian: {{t|hy|ճագար|tr=č̣agar|sc=Armn}}
-* {{trreq|rup}}
+* Aromanian: {{t-needed|rup}}
 * Asturian: {{t|ast|conexu|m}}
 * Azeri: {{t+|az|dovşan}}
 * Bashkir: {{t|ba|ҡуян|sc=Cyrl}}
@@ -74,7 +74,7 @@ From {{etyl|enm|en}} {{term|rabet|lang=enm}}, from {{etyl|frm|en}} dialect (comp
 * Danish: {{t+|da|kanin|c}}
 * Dena'ina: {{t|tfn|hvaya}}
 * Dutch: {{t+|nl|konijn|n}}
-* {{trreq|aer}}
+* Eastern Arrernte: {{t-needed|aer}}
 * Esperanto: {{qualifier|♂♀}} {{t|eo|kuniklo}}, {{qualifier|♂}} {{t|eo|virkuniklo}}, {{qualifier|neologism ♂}} {{t|eo|kunikliĉo}}, {{qualifier|♀}} {{t|eo|kuniklino}}, {{qualifier|♂♀ offspring}} {{t|eo|kuniklido}}, {{qualifier|diminutive ♂♀}} {{t|eo|kunikleto}}
 * Estonian: {{t|et|küülik}}
 * Ewe: {{t|ee|fɔmizi}}
@@ -103,12 +103,12 @@ From {{etyl|enm|en}} {{term|rabet|lang=enm}}, from {{etyl|frm|en}} dialect (comp
 * Italian: {{t+|it|coniglio|m}}
 * Japanese: {{t+|ja|兎|tr=[[うさぎ]], usagi|sc=Jpan}}, {{t|ja|ウサギ|tr=usagi|sc=Jpan}}
 * Jèrriais: {{t|roa-jer|lapîn|m}}
-* {{trreq|mwp}}}
+* Kala Lagaw Ya: {{t-needed|mwp}}}
 * Kannada: {{t+|kn|ಮೊಲ|sc=Knda}}
 * Kazakh: {{t|kk|ор қоян|tr=or qoyan|sc=Cyrl}}, {{t|kk|үй қояны|tr=üy qoyanı|sc=Cyrl}}, {{t|kk|қоян|tr=qoyan|sc=Cyrl}}
 * Khmer: {{t|km|ទន្សាយគល់|tr=tʊənsaay kʊəl|sc=Khmr}}
 * Korean: {{t+|ko|토끼|sc=Hang}}
-* {{trreq|rop}}
+* Kriol: {{t-needed|rop}}
 * Kurdish:
 *: Kurmanji: {{t+|ku|kêroşk}}, {{t+|ku|xirrnîfk}}
 *: Sorani: {{t|ku|که‌روێشک|tr=kêrwişk}}
@@ -144,7 +144,7 @@ From {{etyl|enm|en}} {{term|rabet|lang=enm}}, from {{etyl|frm|en}} dialect (comp
 * Occitan: {{t+|oc|conilh|m}}, {{t|oc|lapin|m}}
 * Pashto: {{t|ps|سوۍ|tr=saway|sc=ps-Arab}}
 * Persian: {{t+|fa|خرگوش|tr=xarguš|sc=fa-Arab}}
-* {{trreq|piu}}
+* Pintupi-Luritja: {{t-needed|piu}}
 * Pitjantjatjara: {{t|pjt|malu}}
 * Polish: {{t+|pl|królik|m}}
 * Portuguese: {{t+|pt|coelho|m}}
@@ -179,7 +179,7 @@ From {{etyl|enm|en}} {{term|rabet|lang=enm}}, from {{etyl|frm|en}} dialect (comp
 * Telugu: {{t+|te|కుందేలు|tr=kuṅdēlu}}
 * Thai: {{t+|th|กระต่าย|tr=kratàai}}
 * Tibetan: {{t|bo|ཡོས|tr=yos|sc=Tibt}}
-* {{trreq|tcs}}
+* Torres Strait Creole: {{t-needed|tcs}}
 * Tswana: {{t|tn|mmutla}}
 * Turkish: {{t+|tr|ada tavşanı}}, {{t+|tr|tavşan}}
 * Turkmen: {{t|tk|towşan}}
