--- a/en/m/muskrat.8239.wikitext
+++ b/en/m/muskrat.8239.wikitext
@@ -25,15 +25,15 @@ Perhaps so called for its [[musky]] [[odour]] and because it resembles a [[rat]]
 {{trans-top|''Ondatra zibethicus''}}
 * Algonquin: {{t|alq|wajack}}
 * Arabic: {{t|ar|فأر المسك|m|sc=Arab}}
-* {{trreq|an}}
-* {{trreq|ast}}
+* Aragonese: {{t-needed|an}}
+* Asturian: {{t-needed|ast}}
 * Azeri: {{t|az|ondatra}}
 * Bashkir: {{t|ba|ондатра|tr=ondatra|sc=Cyrl}}
 * Basque: {{t|eu|arratoi musketadun}}
 * Belarusian: {{t|be|андатра|f}}
 * Breton: {{t+|br|razh-musk}}
 * Bulgarian: {{t+|bg|мускус|tr=muskus}}
-* {{trreq|ca}}
+* Catalan: {{t-needed|ca}}
 * Cherokee: {{t|chr|ᏎᎳᎩᏍᏆ|tr=selagisqua|sc=Cher}}
 * Chinese:
 *: Mandarin: {{t+|cmn|麝鼠|tr=shèshǔ|sc=Hani}}
@@ -49,12 +49,12 @@ Perhaps so called for its [[musky]] [[odour]] and because it resembles a [[rat]]
 * Galician: {{t+|gl|aguaneira}}
 * German: {{t+|de|Bisamratte|f}}
 * Greek: {{t|el|μοσχοπόντικας}}
-* {{trreq|gu}}
+* Gujarati: {{t-needed|gu}}
 * Hungarian: {{t+|hu|pézsma}}
 * Icelandic: {{t|is|moskusrotta}}, {{t|is|bísamrotta}}
 * Ido: {{t+|io|moskorato}}
-* {{trreq|ia}}
-* {{trreq|ie}}
+* Interlingua: {{t-needed|ia}}
+* Interlingue: {{t-needed|ie}}
 * Irish: {{t|ga|muscfhrancach}}
 * Italian: {{t|it|topo muschiato|m}}
 * Japanese: {{t|ja|マスクラット|tr=masukuratto|sc=Jpan}}
@@ -69,8 +69,8 @@ Perhaps so called for its [[musky]] [[odour]] and because it resembles a [[rat]]
 * Maltese: {{t|mt|far tal-misk ta’ l-ilma}}
 * Navajo: {{t|nv|tooh łéʼétsoh}}
 * Norwegian: {{t|no|bisamrotte}}
-* {{trreq|ps}}
-* {{trreq|fa}}
+* Pashto: {{t-needed|ps}}
+* Persian: {{t-needed|fa}}
 * Polish: {{t+|pl|piżmak|m}}
 * Portuguese: {{t|pt|rato almiscareiro|m}}
 * Romanian: {{t+|ro|bizam}}
@@ -81,10 +81,10 @@ Perhaps so called for its [[musky]] [[odour]] and because it resembles a [[rat]]
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|бизамски пацов|m|sc=Cyrl}}
 *: Roman: {{t|sh|bizamski pacov|m|sc=Latn}}, {{t|sh|mošusni štakor|m}} {{qualifier|Croatia}}, {{t|sh|bizamski štakor|m}} {{qualifier|Croatia}}
-* {{trreq|sd}}
+* Sindhi: {{t-needed|sd}}
 * Slovak: {{t|sk|ondatra pižmová}}
 * Slovene: {{t|sl|pižmovka|f}}
-* {{trreq|so}}
+* Somali: {{t-needed|so}}
 * Spanish: {{t|es|rata almizclera}}
 * Swedish: {{t+|sv|bisam|c}}
 * Telugu: {{t+|te|కంపెలుక|tr=kampeluka|sc=Telu}}
@@ -95,9 +95,9 @@ Perhaps so called for its [[musky]] [[odour]] and because it resembles a [[rat]]
 * Upper Sorbian: {{t|hsb|pižmo}}, {{t|hsb|pižmowa šćura}}, {{t|hsb|bizamowa myš}}
 * Welsh: {{t|cy|mwsglygoden}}, {{t|cy|llygoden fwsg}}
 * West Frisian: {{t|fy|muskusrôt}}
-* {{trreq|xh}}
-* {{trreq|yi}}
-* {{trreq|zu}}
+* Xhosa: {{t-needed|xh}}
+* Yiddish: {{t-needed|yi}}
+* Zulu: {{t-needed|zu}}
 {{trans-bottom}}
 
 ===External links===
