Migrating [[Template:ttbc]] and [[Template:trreq]] to [[Template:t-check]] and [[Template:t-needed]] <CD#27433417>

--- a/en/c/CD.26224.wikitext
+++ b/en/c/CD.26224.wikitext
@@ -63,11 +63,11 @@ Abbreviation of various terms and phrases.
 * Esperanto: {{t|eo|KD}}
 * Finnish: {{t+|fi|CD}}
 * French: {{t+|fr|CD|m}}
-* {{trreq|ka}}
+* Georgian: {{t-needed|ka}}
 {{trans-mid}}
 * German: {{t+|de|CD|f}}
 * Greek: {{t+|el|CD|n}}
-* {{trreq|hi}}
+* Hindi: {{t-needed|hi}}
 * Japanese: {{t|ja|シーディー|tr=sīdī}}, {{t+|ja|CD|tr=sīdī}}
 * Korean: {{t+|ko|시디|tr=si-di|sc=Hang}}
 * Macedonian: {{t|mk|це-де|n|tr=ce-de}}
@@ -75,7 +75,7 @@ Abbreviation of various terms and phrases.
 * Persian: {{t|fa|سی‌دی|tr=sidi|sc=fa-Arab}}
 * Portuguese: {{t+|pt|CD|m}}
 * Russian: {{qualifier|indeclinable}} {{t+|ru|CD|m|tr=si-di}}, {{qualifier|indeclinable}} {{t|ru|си-ди|m|tr=si-di}}
-* {{trreq|vi}}
+* Vietnamese: {{t-needed|vi}}
 {{trans-bottom}}
 
 ===Verb===
