--- a/en/b/Balkans.741828.wikitext
+++ b/en/b/Balkans.741828.wikitext
@@ -34,7 +34,7 @@ Used with the definite article {{term|the}}.
 
 ====Translations====
 {{trans-top-also|geographical region in the southeast of Europe|Balkan Peninsula}}
-* {{trreq|sq}}
+* Albanian: {{t-needed|sq}}
 * Ancient Greek: {{t|grc|Χερσόνησος τοῦ Αἵμου|m|tr=Khersonēsos tou Aimou|sc=polytonic}}
 * Armenian: {{t|hy|Բալկաններ|tr=Balkanner}}
 * Asturian: {{t|ast|Balcanes|m}}
