--- a/en/t/Transnistria.741376.wikitext
+++ b/en/t/Transnistria.741376.wikitext
@@ -20,7 +20,7 @@ Literally "beyond the river [[Dniester]]". {{etystub|lang=en}}
 
 ====Translations====
 {{trans-top|Transnistria, an autonomous territory in Moldova}}
-* {{trreq|ab}}
+* Abkhaz: {{t-needed|ab}}
 * Arabic: {{t|ar|ترانسنيستريا|f|tr=transnistriya|sc=Arab}}
 * Armenian: {{t|hy|Մերձդնեստր}}
 * Asturian: {{t|ast|Transnistria|f}}
