--- a/en/v/vote with one's feet.774902.wikitext
+++ b/en/v/vote with one's feet.774902.wikitext
@@ -23,27 +23,27 @@
 
 ====Translations====
 {{trans-top|to express one's preferences through one's actions}}
-* {{trreq|ar}}
+* Arabic: {{t-needed|ar}}
 * Armenian: {{t|hy|քվեարկել ոտքերով|tr=k’vearkel otk’erov}}
-* {{trreq|ca}}
+* Catalan: {{t-needed|ca}}
 * Chinese:
 *: Mandarin: {{t+|cmn|弃权|sc=Hani}}, {{t+|cmn|逃避|sc=Hani}}
-* {{trreq|cs}}
-* {{trreq|nl}}
+* Czech: {{t-needed|cs}}
+* Dutch: {{t-needed|nl}}
 * Finnish: {{t|fi|äänestää jaloillaan}}
 * French: {{t|fr|aller à la pêche}} , {{t|fr|voter avec ses pieds}}
-* {{trreq|de}}
+* German: {{t-needed|de}}
 {{trans-mid}}
-* {{trreq|hi}}
-* {{trreq|it}}
-* {{trreq|ja}}
-* {{trreq|ko}}
+* Hindi: {{t-needed|hi}}
+* Italian: {{t-needed|it}}
+* Japanese: {{t-needed|ja}}
+* Korean: {{t-needed|ko}}
 * Polish: {{t|pl|głosować nogami}}
 * Portuguese: {{t|pt|votar com os pés}}
 * Russian: {{t|ru|голосовать ногами|tr=golosovát' nogámi}}
-* {{trreq|es}}
+* Spanish: {{t-needed|es}}
 * Swedish: {{t|sv|rösta med fötterna}}
-* {{trreq|vi}}
+* Vietnamese: {{t-needed|vi}}
 {{trans-bottom}}
 
 ===See also===
