--- a/en/r/rot.26064.wikitext
+++ b/en/r/rot.26064.wikitext
@@ -301,7 +301,7 @@ From {{etyl|non|nb}} {{term|rót|lang=non}}
 
 ===Etymology 2===
 ====Verb====
-{{head|nb|verb imperative form}}
+{{head|nb|verb form}}
 
 # {{form of|imperative|rote|lang=nb}}
 
