--- a/en/l/leather.4309.wikitext
+++ b/en/l/leather.4309.wikitext
@@ -133,7 +133,7 @@ From {{etyl|enm|en}} {{term|lether|lang=enm}}, from {{etyl|ang|en}} {{term|leþe
 * Polish: {{t+|pl|skórzany}}
 * Portuguese: {{t|pt|[[de]] [[couro]]}}
 {{trans-mid}}
-* {{ttbc|ro}}: {{qualifier|fabricat}} {{t+|ro|piele|alt=din piele}} <!-- was "din [[piele]]" - assumed inflected form or vocalised spelling; please verify if linking is acceptable. see [[User:Kephir/gadgets/xte#Translation_fixing]] -->
+* Romanian: {{qualifier|fabricat}} {{t+check|ro|piele|alt=din piele}} <!-- was "din [[piele]]" - assumed inflected form or vocalised spelling; please verify if linking is acceptable. see [[User:Kephir/gadgets/xte#Translation_fixing]] -->
 * Russian: {{t+|ru|кожаный|tr=kóžanyj}}
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|кожни|m}}
