--- a/en/s/species.4327.wikitext
+++ b/en/s/species.4327.wikitext
@@ -173,22 +173,22 @@ From {{etyl|la|en}} {{term|speciēs||appearance; quality|lang=la}}, from {{term|
 
 {{checktrans-top}}
 * {{ttbc|cmn}}: [[種]], [[种]] (zhǒng); [[類]], [[类]] (lèi); [[種類]], [[种类]] (zhǒnglèi)
-* {{ttbc|da}}: {{t+|da|art|c}}
-* {{ttbc|nl}}: {{t+|nl|soort|f}}
-* {{ttbc|eo}}: {{t|eo|specio}}
-* {{ttbc|fr}}: {{t+|fr|espèce|f}}
-* {{ttbc|de}}: {{t+|de|Art|f}}, {{t+|de|Spezies|f}}
-* {{ttbc|hu}}: {{t+|hu|fajta}} (1), {{t+|hu|faj}} (2,3)
+* Danish: {{t+check|da|art|c}}
+* Dutch: {{t+check|nl|soort|f}}
+* Esperanto: {{t-check|eo|specio}}
+* French: {{t+check|fr|espèce|f}}
+* German: {{t+check|de|Art|f}}, {{t+check|de|Spezies|f}}
+* Hungarian: {{t+check|hu|fajta}} (1), {{t+check|hu|faj}} (2,3)
 * {{ttbc|id}}: [[spesies]], [[jenis]]
 * {{ttbc|ia}}: [[specie]]
 {{trans-mid}}
-* {{ttbc|it}}: {{t+|it|specie|f}}, (plural: [[speci]])
+* Italian: {{t+check|it|specie|f}}, (plural: [[speci]])
 * {{ttbc|lt}}: [[rūšis]] {{g|f}}
-* {{ttbc|pt}}: {{t+|pt|espécie|f}}
+* Portuguese: {{t+check|pt|espécie|f}}
 * {{ttbc|ro}}: [[specie]] {{g|f}}
 * {{ttbc|sl}}: [[vrsta]] {{g|f}}
-* {{ttbc|es}}: {{t+|es|especie|f}}
-* {{ttbc|sv}}: {{t+|sv|art|c}}
+* Spanish: {{t+check|es|especie|f}}
+* Swedish: {{t+check|sv|art|c}}
 {{trans-bottom}}
 
 ====References====
