Migrating [[Template:ttbc]] to [[Template:t-check]] <blow#27438481>

--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -380,10 +380,10 @@ From {{etyl|enm|en}} {{term|blowen|lang=enm}}, from {{etyl|ang|en}} {{m|ang|blā
 
 {{checktrans-top}}
 ''intransitive meanings''
-* {{ttbc|nl}}: {{t+|nl|beffen}} {{qualifier|this is said to mean 'to fellate', but check it}}
-* {{ttbc|eo}}: {{t+|eo|blovi}}
-* {{ttbc|id}}: {{t+|id|meniup}}, {{t|id|meledakkan}} <!-- link as t-SOP if non-idiomatic; put marked word in |alt=; see [[User:Kephir/gadgets/xte#Translation_fixing]] -->
-* {{ttbc|te}}: {{t+|te|ఊదు|tr=oodu|sc=Telu}}, {{t|te|కొట్టుకొనిపోవు|tr=koTTukonipOvu|sc=Telu}}, {{t|te|వీచు|tr=veecu|sc=Telu}}
+* Dutch: {{t+check|nl|beffen}} {{qualifier|this is said to mean 'to fellate', but check it}}
+* Esperanto: {{t+check|eo|blovi}}
+* Indonesian: {{t+check|id|meniup}}, {{t-check|id|meledakkan}} <!-- link as t-SOP if non-idiomatic; put marked word in |alt=; see [[User:Kephir/gadgets/xte#Translation_fixing]] -->
+* Telugu: {{t+check|te|ఊదు|tr=oodu|sc=Telu}}, {{t-check|te|కొట్టుకొనిపోవు|tr=koTTukonipOvu|sc=Telu}}, {{t-check|te|వీచు|tr=veecu|sc=Telu}}
 {{trans-bottom}}
 
 ====Noun====
