Migrating [[Template:ttbc]] to [[Template:t-check]] <theory#27438590>

--- a/en/t/theory.7354.wikitext
+++ b/en/t/theory.7354.wikitext
@@ -228,12 +228,12 @@ In scientific discourse, the sense “unproven conjecture” is discouraged (wit
 {{trans-bottom}}
 
 {{checktrans-top}}
-* {{ttbc|id}}: {{t+|id|teori}}
-* {{ttbc|it}}: {{t+|it|teoria|f}}
+* Indonesian: {{t+check|id|teori}}
+* Italian: {{t+check|it|teoria|f}}
 {{trans-mid}}
 * {{ttbc|ko}}: [[이론]] (iron)
-* {{ttbc|tr}}: {{t+|tr|teori}}
-* {{ttbc|vi}}: {{t+|vi|thuyết}}, {{t+|vi|lý thuyết}}
+* Turkish: {{t+check|tr|teori}}
+* Vietnamese: {{t+check|vi|thuyết}}, {{t+check|vi|lý thuyết}}
 {{trans-bottom}}
 
 ===See also===
