--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -251,8 +251,8 @@ From {{etyl|ang|en}} ''[[wiht]]'', ''ġewiht'', from {{etyl|gem-pro|en}} {{m|gem
 {{trans-bottom}}
 
 {{checktrans-top}}
-* {{ttbc|id}}: {{t+|id|berat}}
-* {{ttbc|es}}: {{t+|es|peso|m}}
+* Indonesian: {{t+check|id|berat}}
+* Spanish: {{t+check|es|peso|m}}
 {{trans-bottom}}
 
 ====Related terms====
