Migrating [[Template:ttbc]] to [[Template:t-check]] <squirrel#27438735>

--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -128,7 +128,7 @@ From {{etyl|fro|en}} {{term|esquirel|lang=fro}}, {{term|escurel|lang=fro}} (when
 *: Upper Sorbian: {{t+|hsb|wjewjerčka|f}}
 * Southern Altai: {{t|alt|тийиҥ|tr=tiyiñ|sc=Cyrl}}
 * Spanish: {{t+|es|ardilla|f}}
-* {{ttbc|sw}}: {{qualifier|nc 9/10}} {{t|sw|kindi}}
+* Swahili: {{qualifier|nc 9/10}} {{t-check|sw|kindi}}
 * Swedish: {{t+|sv|ekorre|c}}
 * Tagal Murut: {{t|mvv|kaitan}}
 * Taos: {{t|twf|c’ùwala’ána}}
