Migrating [[Template:ttbc]] to [[Template:t-check]] <cauliflower#27439262>

--- a/en/c/cauliflower.34088.wikitext
+++ b/en/c/cauliflower.34088.wikitext
@@ -101,32 +101,32 @@ From 16th century {{term|cole-florye|lang=en}}. Compare Latin {{term|caulis|lang
 
 {{checktrans-top}}
 * {{ttbc|sq}}: [[lulelakër]]
-* {{ttbc|bg}}: {{t|bg|карфиол|m|tr=karfiol}}
+* Bulgarian: {{t-check|bg|карфиол|m|tr=karfiol}}
 * {{ttbc|kw}}: [[cawlvlejen]]
-* {{ttbc|eo}}: {{t+|eo|florbrasiko}}
+* Esperanto: {{t+check|eo|florbrasiko}}
 * {{ttbc|fy}}: [[blomkoal]]
 * {{ttbc|he}}: [[כרובית]] (kruvít) {{g|f}}
 * {{ttbc|hi}}: [[गोभी]] (gobhī)
 * {{ttbc|id}}: [[bungkul]]; [[kubis]] [[bunga]]
-* {{ttbc|it}}: {{t+|it|cavolfiore|m}}
-* {{ttbc|la}}: {{t+|la|brassica|f}}
+* Italian: {{t+check|it|cavolfiore|m}}
+* Latin: {{t+check|la|brassica|f}}
 * {{ttbc|mt}}: [[pastarda]] {{g|f}}
 * {{ttbc|nap}}: [[cavelesciore]]
-* {{ttbc|no}}: {{t|no|blomkål}}
+* Norwegian: {{t-check|no|blomkål}}
 {{trans-mid}}
-* {{ttbc|fa}}: {{t|fa|گل کلم|tr=gol-e kalam}}
+* Persian: {{t-check|fa|گل کلم|tr=gol-e kalam}}
 * {{ttbc|pt}}: [[couve-flor]] {{g|f}}
 * {{ttbc|ro}}: [[conopidă]] {{g|f}}
 * {{ttbc|sh}}:
 *: Cyrillic: [[карфиол]] {{g|m}}
 *: Roman: [[karfiol]] {{g|m}}
-* {{ttbc|sk}}: {{t|sk|karfiol|m}}
+* Slovak: {{t-check|sk|karfiol|m}}
 * {{ttbc|sl}}: [[cvetača]] {{g|f}}
 * {{ttbc|es}}: [[pella]] {{g|f}} {{qualifier|Northern Spain|specifically Navarra|Spanish Basque Country|Aragon|and La Rioja}}
 * {{ttbc|th}}: [[ดอกกะหล่ำ]] (dòk gà-làm)
 * {{ttbc|tr}}: [[karnabahar]]
-* {{ttbc|ur}}: {{t|ur|گوبی|tr=gobī}}, {{t|ur|گوبھی|tr=gobhī}}
-* {{ttbc|vi}}: {{t|vi|hoa lơ}}, {{t|vi|hoa lơ trắng}}, {{t|vi|bông cải trắng}}
+* Urdu: {{t-check|ur|گوبی|tr=gobī}}, {{t-check|ur|گوبھی|tr=gobhī}}
+* Vietnamese: {{t-check|vi|hoa lơ}}, {{t-check|vi|hoa lơ trắng}}, {{t-check|vi|bông cải trắng}}
 * {{ttbc|zu}}: [[ukholifulawa]]
 {{trans-bottom}}
 
