--- a/en/o/otter.8227.wikitext
+++ b/en/o/otter.8227.wikitext
@@ -76,6 +76,7 @@ From {{etyl|ang|en}} {{m|ang|oter}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*utraz
 * Latvian: {{t|lv|ūdrs|m}}
 {{trans-mid}}
 * Lithuanian: {{t+|lt|ūdra|f}}
+* Lun Bawang: {{t|lnd|dengen}}
 * Macedonian: {{t|mk|видра|f|tr=vídra}}
 * Malay:
 *: Rumi: {{t|ms|anjing air}}, {{t|ms|berang-berang}}
