--- a/en/m/moonstruck.720222.wikitext
+++ b/en/m/moonstruck.720222.wikitext
@@ -27,7 +27,7 @@
 {{trans-bottom}}
 
 {{checktrans-top}}
-* {{ttbc|de}}: {{t+|de|mondsüchtig}}
+* German: {{t+check|de|mondsüchtig}}
 {{trans-mid}}
 {{trans-bottom}}
 
