Fixing translation table to use {{t}} ([[User:Kephir/gadgets/xte|assisted]]) — please review: fi, it <West Frisian#27460099>

--- a/en/w/West Frisian.741118.wikitext
+++ b/en/w/West Frisian.741118.wikitext
@@ -28,7 +28,7 @@
 * French: {{t|fr|frison occidental|m}}
 * German: {{t+|de|Westfriesisch|n}}
 {{trans-mid}}
-* Italian: lingua frisone occidentale, lingua frisona occidentale (ad hoc)
+* Italian: {{t-check|it|[[lingua]] [[frisone]] [[occidentale]]}} {{attention|it|2=was "lingua frisone occidentale" - assumed sum-of-parts; if an idiom, remove the wikilinks to the individual words. see [[User:Kephir/gadgets/xte#Translation_fixing]]}}, {{qualifier|ad hoc}} {{t-check|it|[[lingua]] [[frisona]] [[occidentale]]}} {{attention|it|2=was "lingua frisona occidentale" - assumed sum-of-parts; if an idiom, remove the wikilinks to the individual words. see [[User:Kephir/gadgets/xte#Translation_fixing]]}}
 * Japanese: {{t+|ja|フリジア語|tr=Furijia-go}}, {{t|ja|フリース語|tr=Furīsu-go}}
 * Limburgish: {{t+|li|Wèsfriesj|n}}
 * Polish: (język) {{t|pl|zachodniofryzyjski|m}}
@@ -40,8 +40,8 @@
 
 {{trans-top|the Western Frisian dialect of Dutch}}
 * Dutch: {{t|nl|West-Fries}}
-* Finnish: [[länsifriisi|länsifriisiläinen]] [[murre]]
-* Italian: dialetto frisone occidentale (ad hoc)
+* Finnish: {{t-check|fi|[[länsifriisi|länsifriisiläinen]] [[murre]]}} {{attention|fi|2=was "[[länsifriisi|länsifriisiläinen]] [[murre]]" - assumed sum-of-parts; if an idiom, remove the wikilinks to the individual words. see [[User:Kephir/gadgets/xte#Translation_fixing]]}}
+* Italian: {{qualifier|ad hoc}} {{t-check|it|[[dialetto]] [[frisone]] [[occidentale]]}} {{attention|it|2=was "dialetto frisone occidentale" - assumed sum-of-parts; if an idiom, remove the wikilinks to the individual words. see [[User:Kephir/gadgets/xte#Translation_fixing]]}}
 {{trans-mid}}
 * Polish: {{t|pl|zachodniofryzyjski|m}}
 * Russian: {{t|ru|западнофризский|m|tr=zapadnofrízskij|sc=Cyrl}} {{qualifier|язы́к}}
@@ -50,10 +50,10 @@
 
 {{checktrans-top}}
 Please distinguish between the Frisian language group, the West Frisian language (sometimes known as "Frisian"), and the West Frisian dialect.
-* {{ttbc|fr}}: [[frison]] {{g|m}}
-* {{ttbc|is}}: [[frísneska]] {{g|f}}
-* {{ttbc|es}}: [[frisón]] {{g|m}}
-* {{ttbc|sv}}: [[frisiska]] {{g|c}}
+* {{ttbc|fr}}: {{t-check|fr|frison|m}}
+* {{ttbc|is}}: {{t-check|is|frísneska|f}}
+* {{ttbc|es}}: {{t-check|es|frisón|m}}
+* {{ttbc|sv}}: {{t-check|sv|frisiska|c}}
 {{checktrans-bottom}}
 
 ===See also===
