Migrating [[Template:ttbc]] to [[Template:t-check]] <West Frisian#27460485>

--- a/en/w/West Frisian.741118.wikitext
+++ b/en/w/West Frisian.741118.wikitext
@@ -50,10 +50,10 @@
 
 {{checktrans-top}}
 Please distinguish between the Frisian language group, the West Frisian language (sometimes known as "Frisian"), and the West Frisian dialect.
-* {{ttbc|fr}}: {{t-check|fr|frison|m}}
-* {{ttbc|is}}: {{t-check|is|frísneska|f}}
-* {{ttbc|es}}: {{t-check|es|frisón|m}}
-* {{ttbc|sv}}: {{t-check|sv|frisiska|c}}
+* French: {{t-check|fr|frison|m}}
+* Icelandic: {{t-check|is|frísneska|f}}
+* Spanish: {{t-check|es|frisón|m}}
+* Swedish: {{t-check|sv|frisiska|c}}
 {{checktrans-bottom}}
 
 ===See also===
