Migrating [[Template:ttbc]] to [[Template:t-check]] <mill#27462199>

--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -208,7 +208,7 @@ From {{etyl|enm|en}} {{term|mille|lang=enm}}, {{etyl|ang|en}} {{term|mylen|lang=
 {{trans-bottom}}
 
 {{checktrans-top}}
-* {{ttbc|ia}}: [[fabrica]], [[molino]]
+* Interlingua: {{t-check|ia|fabrica}}, {{t-check|ia|molino}}
 * {{ttbc|csb}}: [[młin]] {{g|m}} (3)
 {{trans-bottom}}
 
