Migrating [[Template:ttbc]] to [[Template:t-check]] <whistle#27462497>

--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -162,12 +162,12 @@ From {{etyl|enm|en}} {{term|whistlen|lang=enm}}; {{etyl|ang|en}} {{term|hwistlan
 {{checktrans-top}}
 * Arabic: {{t-check|ar|صفارة|tr=ʂufára|f}}
 * {{ttbc|cmn}}: [[口哨]] (kǒushào)
-* {{ttbc|fr}}: [[sifflet]] {{g|m}}
-* {{ttbc|id}}: [[peluit]]
+* French: {{t-check|fr|sifflet|m}}
+* Indonesian: {{t-check|id|peluit}}
 {{trans-mid}}
-* {{ttbc|it}}: [[fischietto]], [[fischio]]
+* Italian: {{t-check|it|fischietto}}, {{t-check|it|fischio}}
 * {{ttbc|ko}}: [[호르라기]] (horeuragi)
-* {{ttbc|sw}}: [[kipenga]]
+* Swahili: {{t-check|sw|kipenga}}
 * {{ttbc|te}}: [[ఈల]] (eela), [[బూర]] (boora)
 {{trans-bottom}}
 
