--- a/en/c/CD-RW.26222.wikitext
+++ b/en/c/CD-RW.26222.wikitext
@@ -18,7 +18,7 @@
 {{trans-top|Compact Disk - Read Writable}}
 * Jèrriais: {{t|roa-jer|disque èrenr'gistrabl'ye|m}}
 {{trans-mid}}
-* {{ttbc|sh}}: [[piši-briši cede]]
+* Serbo-Croatian: {{t-check|sh|piši-briši cede}}
 {{trans-bottom}}
 
 [[et:CD-RW]]
