Migrating [[Template:ttbc]] to [[Template:t-check]] <sir#27463503>

--- a/en/s/sir.26262.wikitext
+++ b/en/s/sir.26262.wikitext
@@ -89,13 +89,13 @@ From {{etyl|enm|en}} {{term|sir|lang=enm}}, from {{etyl|fro|en}} {{term|sire||ma
 {{trans-bottom}}
 
 {{checktrans-top}}
-* {{ttbc|ca}}: [[senyor]] {{g|m}}
+* Catalan: {{t-check|ca|senyor|m}}
 * French: {{t+|fr|seigneur|m}}
-* {{ttbc|it}}: [[signore]] {{g|m}}
+* Italian: {{t-check|it|signore|m}}
 {{trans-mid}}
-* {{ttbc|pt}}: [[senhor]] {{g|m}}
+* Portuguese: {{t-check|pt|senhor|m}}
 * {{ttbc|sk}}: [[pán]] {{g|m}}, [[pane]] ''m vocative''
-* {{ttbc|es}}: [[señor]] {{g|m}}
+* Spanish: {{t-check|es|señor|m}}
 {{trans-bottom}}
 
 ===Verb===
