Migrating [[Template:ttbc]] to [[Template:t-check]] <consumption#27463777>

--- a/en/c/consumption.34058.wikitext
+++ b/en/c/consumption.34058.wikitext
@@ -82,9 +82,9 @@ From {{etyl|fro|en}} {{term|consumpcion|lang=fro}}, from {{etyl|la|en}} {{term|c
 {{trans-see|pulmonary tuberculosis}}
 
 {{checktrans-top}}
-* {{ttbc|de}}: [[Schwindsucht]] {{g|f}}
+* German: {{t-check|de|Schwindsucht|f}}
 {{trans-mid}}
-* {{ttbc|tr}}: [[yoğaltım]]
+* Turkish: {{t-check|tr|yoğaltım}}
 {{trans-bottom}}
 
 [[ar:consumption]]
