Migrating [[Template:ttbc]] to [[Template:t-check]] <public school#27463791>

--- a/en/p/public school.34050.wikitext
+++ b/en/p/public school.34050.wikitext
@@ -66,7 +66,7 @@ From {{term|public|lang=en}} (originally, "[[communal]]" and contrasted with [[p
 {{trans-bottom}}
 
 {{checktrans-top}}
-* {{ttbc|vi}}: [[trường công]]
+* Vietnamese: {{t-check|vi|trường công}}
 {{trans-bottom}}
 
 [[Category:en:Education]]
