Migrating [[Template:ttbc]] to [[Template:t-check]] <gamble#27463827>

--- a/en/g/gamble.34097.wikitext
+++ b/en/g/gamble.34097.wikitext
@@ -43,9 +43,9 @@ From {{etyl|ang|en}} [[gamenian]] 'to play', either via a dialectal survival of 
 {{trans-bottom}}
 
 {{checktrans-top}}
-* {{ttbc|ia}}: [[joco]]
+* Interlingua: {{t-check|ia|joco}}
 {{trans-mid}}
-* {{ttbc|pt}}: [[jogo]] {{g|m}}
+* Portuguese: {{t-check|pt|jogo|m}}
 {{trans-bottom}}
 
 ===Verb===
@@ -112,9 +112,9 @@ From {{etyl|ang|en}} [[gamenian]] 'to play', either via a dialectal survival of 
 
 <!--intransitive? both? In English, the 1st and 3rd are not distinct senses. -->
 {{checktrans-top}}
-* {{ttbc|ia}}: [[jocar]]
+* Interlingua: {{t-check|ia|jocar}}
 {{trans-mid}}
-* {{ttbc|pt}}: [[jogar]]
+* Portuguese: {{t-check|pt|jogar}}
 {{trans-bottom}}
 
 [[zh-min-nan:gamble]]
