--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -141,7 +141,7 @@ From 16th century criminal slang, likely from {{term|abet|lang=en}} or {{etyl|an
 {{trans-bottom}}
 
 {{checktrans-top}}
-* Indonesian: {{t-check|id|taruh|bertaruh}}
+* Indonesian: {{t-check|id|taruh|alt=bertaruh}}
 * {{ttbc|lv}}: [[nosaukt]] [[likme|likmi]]
 * {{ttbc|wuu}}:
 *: Suzhou dialect: [[ruánl tondæ]]
