t+ru:[[коза]] ([[WT:EDIT|Assisted]]) <she-goat#27469627>

--- a/en/s/she-goat.802749.wikitext
+++ b/en/s/she-goat.802749.wikitext
@@ -18,6 +18,7 @@
 * Low German: {{t|nds|Zeeg|f}}, {{t|nds|Zääg|f}}, {{t|nds|Seeg|f}}, {{t|nds|Sääg|f}}
 * Macedonian: {{t|mk|коза|f|tr=koza}}
 * Old Church Slavonic: {{t|cu|коза|f|tr=koza|sc=Cyrl}}
+* Russian: {{t+|ru|коза́|f|sc=Cyrl}}
 * Volapük: {{qualifier|♂♀}} {{t+|vo|kapar}}, {{qualifier|♂}} {{t+|vo|hikapar}}, {{qualifier|♀}} {{t+|vo|jikapar}}
 {{trans-bottom}}
 
