--- a/en/a/all bark and no bite.742638.wikitext
+++ b/en/a/all bark and no bite.742638.wikitext
@@ -11,13 +11,17 @@
 
 ====Translations====
 {{trans-top|full of big talk}}
-* Greek: {{t|el|σκυλί που γαβγίζει δεν δαγκώνει|sc=Grek}}, {{t|el|σκύλος που γαβγίζει δεν δαγκώνει|sc=Grek}}
-* Italian: {{t|it|tutto fumo e niente arrosto}}, {{t|it|cane che abbaia non morde}}
-* Spanish: {{t|es|perro ladrador, poco mordedor}}, {{t|es|mucho ruido y pocas nueces}}
+* French: {{t-check|fr|grande gueule}}
+* Italian: {{t|it|tutto fumo e niente arrosto}}
+* Spanish: {{t|es|mucho ruido y pocas nueces}}
 {{trans-mid}}
 * Swedish: {{t|sv|stor i orden men liten på jorden}}
 {{trans-bottom}}
 
-{{checktrans-top}}
-* French: {{t-check|fr|grande gueule}}
+====Translations====
+{{trans-top|says cutting remarks, but actually has a soft personality underneath}}
+* Greek: {{t|el|σκυλί που γαβγίζει δεν δαγκώνει|sc=Grek}}, {{t|el|σκύλος που γαβγίζει δεν δαγκώνει|sc=Grek}}
+* Italian: {{t|it|cane che abbaia non morde}}
+{{trans-mid}}
+* Spanish: {{t|es|perro ladrador, poco mordedor}}
 {{trans-bottom}}
