--- a/en/a/all bark and no bite.742638.wikitext
+++ b/en/a/all bark and no bite.742638.wikitext
@@ -12,6 +12,7 @@
 ====Translations====
 {{trans-top|full of big talk}}
 * French: {{t-check|fr|grande gueule}}
+* Greek: {{t|el|όλο λόγια|sc=Grek}}
 * Italian: {{t|it|tutto fumo e niente arrosto}}
 * Spanish: {{t|es|mucho ruido y pocas nueces}}
 {{trans-mid}}
