--- a/en/a/all bark and no bite.742638.wikitext
+++ b/en/a/all bark and no bite.742638.wikitext
@@ -11,7 +11,7 @@
 
 ====Translations====
 {{trans-top|full of big talk}}
-* French: {{t-check|fr|grande gueule}}
+* French: {{t|fr|grande gueule}}
 * Greek: {{t|el|όλο λόγια|sc=Grek}}
 * Italian: {{t|it|tutto fumo e niente arrosto}}
 * Spanish: {{t|es|mucho ruido y pocas nueces}}
