--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -221,7 +221,7 @@ British slang sense "police officer" from ''ante'' 1785.<ref>'''2003''', Victori
 * Romanian: {{t+|ro|porc|m}}
 * Romansch: {{t|rm|portg|m}}, {{t|rm|piertg|m}}, {{t|rm|püerch|m}}, {{t|rm|chucal|m}}
 * Russian: {{t+|ru|свинья|f|tr=svinʹjá}}, {{t+|ru|боров|m|tr=bórov|sc=Cyrl}} {{qualifier|boar}}
-* {{ttbc|Sami}}<!-- Wiktionary considers this a language group; please specify the language more precisely -->: [[spiidni]]
+* Northern Sami: {{t|ne|spiidni}}
 * Samoan: {{t|sm|pua'a}}
 * Sanskrit: {{t|sa|सूकर|tr=sūkara|sc=Deva}}
 * Sardinian: {{t|sc|porcu}}, {{t|sc|polcu|m}}, {{t|sc|procu|m}}, {{t|sc|mannale}}, {{t|sc|mannali}}
