--- a/en/e/even so.742278.wikitext
+++ b/en/e/even so.742278.wikitext
@@ -12,6 +12,7 @@
 * Dutch: {{t+|nl|desondanks}}, {{t|nl|zelfs dan}}, {{t+|nl|toch}}
 * Finnish: {{t|fi|siitä huolimatta}}
 * Hebrew: {{t|he|בְּכָל זֹאת|tr=bekhol zot|sc=Hebr}}
+* Irish: {{t|ga|mar sin féin}}
 {{trans-mid}}
 * Mandarin: {{t|cmn|即使这样|sc=Hani}}
 * Russian: {{t|ru|несмотря на это|tr=nesmotrjá na éto|sc=Cyrl}}
