--- a/en/b/behold.6790.wikitext
+++ b/en/b/behold.6790.wikitext
@@ -34,7 +34,7 @@ Rarely used in informal speech. The past participle [[beholden]] now has a meani
 * Esperanto: {{t|eo|rigardi}}
 * Finnish: {{qualifier|1}} {{t|fi|katsoa}}
 * French: {{t+|fr|regarder}}, {{t+|fr|voir}}
-* German: {{t+|de|betrachten}}, {{t+|de|sehen}}, {{t+|de|schauen}}
+* German: {{t+|de|betrachten}}, {{t+|de|sehen}}, {{t+|de|schauen}}, {{t+|de|anschauen}}, {{t+|de|ansehen}}
 * Hebrew: {{t+|he|הִנֵּה|tr=hiné|sc=Hebr}}
 * Hungarian: {{t+|hu|meglát}}, {{t+|hu|észrevesz}}, {{t+|hu|megpillant}}
 {{trans-mid}}
