--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -5,7 +5,7 @@
 ===Etymology 1===
 From {{etyl|enm|en}} {{term|pigge||pig, pigling|lang=enm}} (originally a term for a young pig, with adult pigs being {{term|swine|lang=en}}), apparently from {{etyl|ang|en}} {{m|ang|*picga}} (attested only in compounds, such as {{m|ang|picgbrēad||mast, pig-fodder}}). Connection to early Dutch ''bigge'' (modern {{etyl|nl|-}} {{term|big||piglet|lang=nl}}), {{etyl|fy|-}} {{term|bigge||pigling|lang=fy}}{{,}} and similar terms in {{etyl|gml|-}} is sometimes proposed, "but the phonology is difficult"<ref name"NED">''A new English dictionary on historical principles''</ref> and other sources say the words are "almost certainly not" related.<ref>{{R:Dictionary.com}}</ref>
 
-British slang sense "police officer" from ''ante'' 1785.<ref>'''2003''', Victoria Fromkin, Robert Rodman, Nina M. Hyams, ''An Introduction to Language'', [http://books.google.com.au/books?id=7PftAAAAMAAJ&q=%22pig%22|%22pigs%22+police+-intitle:%22%22+-inauthor:%22%22&dq=%22pig%22|%22pigs%22+police+-intitle:%22%22+-inauthor:%22%22&hl=en&sa=X&ei=6jLXT4-XMsHYigfxvJS4Aw&redir_esc=y page 474] — Similarly, the use of the word '''''pig''''' for “policeman” goes back at least as far as 1785, when a writer of the time called a Bow Street police officer a “China Street '''pig'''.”</ref>
+British slang sense "police officer" from at least 1785.<ref>'''2003''', Victoria Fromkin, Robert Rodman, Nina M. Hyams, ''An Introduction to Language'', [http://books.google.com.au/books?id=7PftAAAAMAAJ&q=%22pig%22|%22pigs%22+police+-intitle:%22%22+-inauthor:%22%22&dq=%22pig%22|%22pigs%22+police+-intitle:%22%22+-inauthor:%22%22&hl=en&sa=X&ei=6jLXT4-XMsHYigfxvJS4Aw&redir_esc=y page 474] — Similarly, the use of the word '''''pig''''' for “policeman” goes back at least as far as 1785, when a writer of the time called a Bow Street police officer a “China Street '''pig'''.”</ref>
 
 ====Pronunciation====
 * {{IPA|/pɪɡ/|lang=en}}
@@ -175,7 +175,7 @@ British slang sense "police officer" from ''ante'' 1785.<ref>'''2003''', Victori
 * Italian: {{t+|it|maiale|m}}, {{t+|it|porco|m}}, {{t+|it|suino|m}}
 * Japanese: {{t+|ja|豚|tr=[[ぶた]], buta}}, {{t+|ja|ブタ|tr=buta|sc=Jpan}}
 * Jèrriais: {{t|roa-jer|couochon|m}}, {{t|roa-jer|bête à saie|f}}, {{t|roa-jer|por|m}}, {{t|roa-jer|gronneux|m}}, {{t|roa-jer|moussieu|m}}, {{t|roa-jer|quétot|m}}
-* {{ttbc|Kaili}}<!-- This is a language group, please use a more specific label: lew for Ledo Kaili, kzf for Da'a Kaili, unz for Unde Kaili, or brs Baras -->: vavu
+* Ledo Kaili: {{t-check|lew|bavu}}
 * Kannada: {{t+|kn|ಹಂದಿ|tr=handi|sc=Knda}}
 * Karelian: {{t|krl|počči}}
 * Kazakh: {{t|kk|шошқа|tr=şoşqa|sc=Cyrl}}
