--- a/en/m/milkweed.720309.wikitext
+++ b/en/m/milkweed.720309.wikitext
@@ -12,6 +12,9 @@
 ====Synonyms====
 * [[silkweed]]
 
+====Hyponyms====
+* {{sense|plants in genus ''Asclepias''}} {{vern|common milkweed|pedia=1}}, {{vern|clasping milkweed|pedia=1}}, {{vern|butterfly milkweed|pedia=1}}, {{vern|fourleaf milkweed|pedia=1}}, {{vern|green comet milkweed|pedia=1}}, {{vern|poke milkweed|pedia=1}}, {{vern|purple milkweed|pedia=1}}, {{vern|red milkweed|pedia=1}}, {{vern|redring milkweed|pedia=1}}, {{vern|swamp milkweed|pedia=1}}, {{vern|whorled milkweed|pedia=1}}
+
 ===External links===
 * {{pedia}}
 * {{specieslite|Asclepias}}
