--- a/en/t/though.7361.wikitext
+++ b/en/t/though.7361.wikitext
@@ -88,6 +88,7 @@ From {{etyl|enm|en}} {{term|thaugh|lang=enm}}, {{term|thagh||lang=enm}}, from {{
 * Greek: {{t|el|έστω και αν|tr=ésto ké án}}, {{t+|el|αν και|tr=án ké}}, {{t+|el|μολονότι|tr=mólonóti}}, {{t+|el|καίτοι|tr=kéti}}
 * Icelandic: {{t+|is|þó}}, {{t+|is|þótt}}
 * Indonesian: {{t+|id|walau}}, {{t+|id|meski}}
+* Irish: {{t|ga|cé}}
 {{trans-mid}}
 * Italian: [[anche]] [[se]]
 * Japanese: {{t|ja|だが|tr=daga}}, {{t|ja|だけれども|tr=dakeredomo}}, {{t|ja|だけど|tr=dakeredo}}{{qualifier|colloquial}}
