--- a/en/m/mouthwatering.720181.wikitext
+++ b/en/m/mouthwatering.720181.wikitext
@@ -16,3 +16,8 @@
 [[et:mouthwatering]]
 [[vi:mouthwatering]]
 [[zh:mouthwatering]]
+
+====Translations====
+{{trans-top|delicious in taste}}
+{{trans-mid}}
+{{trans-bottom}}
