t+ca:[[septe nasal]] ([[WT:EDIT|Assisted]]) <nasal septum#27802018>

--- a/en/n/nasal septum.803472.wikitext
+++ b/en/n/nasal septum.803472.wikitext
@@ -12,6 +12,7 @@
 {{trans-top|septum in the nose}}
 * Arabic: {{t|ar|حاجز الأنف|sc=Arab}}
 * Azeri: {{t|az|burun arakəsmə sümüyü}}
+* Catalan: {{t|ca|septe nasal|m}}
 * Chinese:
 *: Mandarin: {{t+|cmn|鼻中隔|tr=bízhōnggé|sc=Hani}}
 * Czech: {{t|cs|nosní přepážka|f}}
