--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -97,7 +97,7 @@ From {{etyl|enm|en}} {{term|then|then(ne)|lang=enm}}, {{term|than|than(ne)|lang=
 * Old English: {{t|ang|þā}}
 * Persian: {{t+|fa|پس|tr=pas|sc=fa-Arab}}
 * Polish: {{t+|pl|wówczas}}, {{t+|pl|wtedy}}
-* Portuguese: {{t+|pt|então}}, [[naquele]] {{t+|pt|tempo}}, [[naquela]] {{t+|pt|época}}, {{t|pt|nesse tempo}}, [[nessa]] {{t+|pt|época}}
+* Portuguese: {{t+|pt|então}}, {{t|pt|[[naquele]] [[tempo]]}}, {{t|pt|[[naquela]] [[época]]}}
 * Romanian: {{t+|ro|atunci}}
 * Russian: {{t+|ru|тогда|tr=togdá}}
 * Scots: {{t|sco|than}}
