--- a/en/i/indeterminable.742104.wikitext
+++ b/en/i/indeterminable.742104.wikitext
@@ -7,8 +7,20 @@ From {{etyl|frm|en}} {{term|indéterminable|lang=frm}}, from {{etyl|LL.|en}} {{t
 ===Adjective===
 {{en-adj}}
 
-# That is incapable of being [[measure]]d
-# That is incapable of being [[ascertain]]ed
+# that is incapable of being [[measure]]d
+# that is incapable of being [[ascertain]]ed
+
+====Related terms====
+* [[indeterminably]]
+
+====Translations====
+{{ttbc-top}}
+* French: {{t+check|fr|indéterminable}}
+* Italian: {{t+check|it|imprecisabile}}, {{t+check|it|indeterminabile}}
+{{trans-mid}}
+* Manx: {{t+check|gv|neuhoiaghagh}}
+* Portuguese: {{t+check|pt|indeterminável}}
+{{trans-bottom}}
 
 ===Noun===
 {{en-noun}}
