/* Translations */ fi <nasal septum#27872479>

--- a/en/n/nasal septum.803472.wikitext
+++ b/en/n/nasal septum.803472.wikitext
@@ -17,7 +17,7 @@
 *: Mandarin: {{t+|cmn|鼻中隔|tr=bízhōnggé|sc=Hani}}
 * Czech: {{t|cs|nosní přepážka|f}}
 * Dutch: {{t|nl|neustussenschot|n}}
-* Finnish: {{t|fi|nenän_väliseinä}}
+* Finnish: {{t|fi|nenän väliseinä}}
 * French: {{t+|fr|cloison|f}}
 * Galician: {{t|gl|tabique nasal|m}}
 * German: {{t|de|Nasenscheidewand|f}}
