/* Old Irish */ <-um#27885351>

--- a/en/-/-um.34068.wikitext
+++ b/en/-/-um.34068.wikitext
@@ -167,7 +167,7 @@ The suffix to be used is determined by [[w:vowel harmony|vowel harmony]]. If the
 * {{IPA|/um/|lang=sga}}
 
 ===Suffix===
-{{head|sga|suffix|[[Appendix:Old Irish affixed pronouns|suffixed pronoun]]}}
+{{head|sga|suffix|cat2=pronouns|[[Appendix:Old Irish affixed pronouns|suffixed pronoun]]}}
 
 # [[me]]
 
@@ -177,8 +177,6 @@ The suffix to be used is determined by [[w:vowel harmony|vowel harmony]]. If the
 
 ====Derived terms====
 {{suffixsee|sga}}
-
-[[Category:Old Irish pronouns]]
 
 ----
 
