/* Old Irish */ <at#27928075>

--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -441,14 +441,12 @@ From {{etyl|sga|ga}} {{term|att|lang=sga}}.
 ==Old Irish==
 
 ===Alternative forms===
-* {{sense|2 sg.}} {{l/sga|it}}
-* {{sense|3 pl. rel.}} {{l/sga|ata}}
+* {{sense|second-person singular}} {{l|sga|it}}
+* {{sense|third-person plural relative}} {{l|sga|ata}}
 
 ===Pronunciation===
-;2nd singular
-* {{IPA|/at/|lang=sga}}
-;3rd plural relative
-* {{IPA|/ad/|lang=sga}}
+* {{sense|second-person singular}} {{IPA|/at/|lang=sga}}
+* {{sense|third-person plural relative}} {{IPA|/ad/|lang=sga}}
 
 ===Verb===
 {{head|sga|verb form}}
