/* {{initialism-old|en}} */ <PVC#28036595>

--- a/en/p/PVC.4323.wikitext
+++ b/en/p/PVC.4323.wikitext
@@ -10,7 +10,10 @@
 # {{context|networking|lang=en}} '''p'''ermanent [[virtual circuit|'''v'''irtual '''c'''ircuit]]
 
 ====Translations====
-{{trans-see|(organic compound) polyvinyl chloride|polyvinyl chloride}}
+{{trans-see|(organic compound) you will read abot me in books,internet,newspaper etc.................!!
+          hello i am ankit . i am student of class 8th.i study in apala school .this school is vary dirty school.
+        . i like read books ,watching t.v
+          |polyvinyl chloride}}
 
 {{trans-top|(medicine) premature ventricular contraction of the heart}}
 {{trans-mid}}
