/* Noun */ # {{cx|astrophysics|lang=en}} The [[proportionality]] [[constant]] which converts CO emission line brightness to molecular hydrogen mass. <X factor#28230885>

--- a/en/x/X factor.802821.wikitext
+++ b/en/x/X factor.802821.wikitext
@@ -17,5 +17,6 @@
 #* '''2007''', Tasmina Perry, ''Daddy's Girls'', page 12
 #*: And put him on an LA film set and he glowed with that indefinable '''X-factor''' that agents the world over wished they could bottle.
 # [[prothrombinase]], also called [[factor X]].
+# {{cx|astrophysics|lang=en}} The [[proportionality]] [[constant]] which converts CO emission line brightness to molecular hydrogen mass.
 
 [[et:X factor]]
