t+myv:[[пача]] ([[WT:EDIT|Assisted]]) <ferret#28303428>

--- a/en/f/ferret.8237.wikitext
+++ b/en/f/ferret.8237.wikitext
@@ -33,6 +33,7 @@
 * Czech: {{t|cs|fretka|f}}
 * Danish: {{t|da|fritte|c}}
 * Dutch: {{t+|nl|fret|m}}
+* Erzya: {{t|myv|пача}}
 * Esperanto: {{t+|eo|furo}}
 * Estonian: {{t|et|tuhkur}}
 * Finnish: {{t+|fi|fretti}}
