t+de:[[einfacher Satz]] t+de:[[Satzgefüge]] t+ru:[[простое предложение]] ([[WT:EDIT|Assisted]]) <simple sentence#28415071>

--- a/en/s/simple sentence.741362.wikitext
+++ b/en/s/simple sentence.741362.wikitext
@@ -9,10 +9,12 @@
 {{trans-top|sentence containing one independent clause and no dependent clause}}
 * Armenian: {{t|hy|պարզ նախադասություն|tr=parz naxadasut’yun}}
 * French: {{t+|fr|phrase simple|f}}
+* German: {{t+|de|einfacher Satz|m}}, {{t+|de|Satzgefüge|n}}
 * Japanese: {{t|ja|単文|tr=tanbun|sc=Jpan}}
 {{trans-mid}}
 * Korean: {{t+|ko|단문|sc=Kore}}, {{t|ko|단순문|sc=Kore}}
 * Polish: {{t|pl|zdanie pojedyncze|n}}
+* Russian: {{t|ru|простое предложе́ние|n|sc=Cyrl}}
 * Spanish: {{t+|es|oración simple|f}}
 {{trans-bottom}}
 
