/* English */ <simple sentence#28418209>

--- a/en/s/simple sentence.741362.wikitext
+++ b/en/s/simple sentence.741362.wikitext
@@ -3,7 +3,10 @@
 ===Noun===
 {{en-noun}}
 
-# {{context|grammar|lang=en}} A [[sentence]] that contains one [[independent clause]] and no [[dependent clause]]. Compare [[compound sentence]] and [[complex sentence]].
+# {{context|grammar|lang=en}} A [[sentence]] that contains one [[independent clause]] and no [[dependent clause]].
+
+==== Coordinate terms====
+* {{sense|grammar}} [[compound sentence]], [[complex sentence]].
 
 ====Translations====
 {{trans-top|sentence containing one independent clause and no dependent clause}}
