--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -156,7 +156,7 @@ From {{etyl|fro|en}} {{term|esquirel|lang=fro}}, {{term|escurel|lang=fro}} (when
 {{trans-bottom}}
 
 ===Verb===
-{{en-verb|squirrel|ing}}
+{{en-verb}}
 
 # {{context|transitive|lang=en}} To store in a secretive manner, to hide something for future use
 
