--- a/en/s/sir.26262.wikitext
+++ b/en/s/sir.26262.wikitext
@@ -99,7 +99,7 @@ From {{etyl|enm|en}} {{term|sir|lang=enm}}, from {{etyl|fro|en}} {{term|sire||ma
 {{trans-bottom}}
 
 ===Verb===
-{{en-verb|sirr|ed}}
+{{en-verb|sirr|ing}}
 
 # To address (someone) using "sir".
 #: ''"Right this way, sir." — "You don't have to '''sir''' me."''
