--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -446,7 +446,7 @@ From {{etyl|enm|en}} {{term|blowen|lang=enm}}, from {{etyl|ang|en}} {{m|ang|blā
 |passage=Norwich returned to second in the Championship with victory over Nottingham Forest, whose promotion hopes were dealt another '''blow'''.}}
 
 =====Synonyms=====
-* {{sense|The act of striking}} [[strike]], [[hit]], [[punch]]
+* {{sense|The act of striking}} [[bace]], [[strike]], [[hit]], [[punch]]
 * {{sense|A damaging occurrence}} [[disaster]], [[calamity]]
 
 =====Derived terms=====
