--- a/en/m/Maconochie.801844.wikitext
+++ b/en/m/Maconochie.801844.wikitext
@@ -9,6 +9,8 @@ After the Maconochie company in [[Aberdeen]] that produced it.
 ===Noun===
 {{en-noun|-}}
 
-# A [[stew]] of sliced [[turnip]]s and [[carrot]]s, a widely-used food [[ration]] for [[British]] [[soldier]]s in front-line [[trench]]es during [[World War I]].
+# {{cx|now|_|historical|lang=en}} A tinned [[stew]] of sliced [[turnip]]s and [[carrot]]s, a widely-used food [[ration]] for [[British]] [[soldier]]s in front-line [[trench]]es during [[World War I]].
 #*'''1928''', {{w|Siegfried Sassoon}}, ''Memoirs of a Fox-Hunting Man'', Penguin 2013, p. 262:
 #*:Dottrell said the toasted cheese wasn't too bad, and ‘There's worse things in the world than half-warmed '''Maconochie''',’ he remarked.
+#*'''1975''', {{w|Paul Fussell}}, ''The Great War and Modern Memory'', OUP 2013, p. 53:
+#*:The troops seemed to like the '''Maconochie''' best, but the Germans favored the British corned beef, seldom returning from a raid on the British lines without taking back as much as they could carry.
