/* Conjugation */use {{temp|fro-conj-er}}, replaced: {{fro-conj-er-e|vex}} → {{fro-conj-er}} using [[Project:AWB|AWB]] <vexer#28714247>

--- a/en/v/vexer.775491.wikitext
+++ b/en/v/vexer.775491.wikitext
@@ -49,7 +49,7 @@
 # to [[harm]]; to [[hurt]], especially by [[torture]]
 
 ====Conjugation====
-{{fro-conj-er-e|vex}}
+{{fro-conj-er}}
 
 ====Descendants====
 * English: {{l|en|vex}} {{qualifier|borrowed into Middle English}}
